feat: initial upgrade proposal

--- a/diffs/1088_0x90df02551bB792286e8D4f13E0e357b4Bf1D6a57_before_1088_0x90df02551bB792286e8D4f13E0e357b4Bf1D6a57_after.md
+++ b/diffs/1088_0x90df02551bB792286e8D4f13E0e357b4Bf1D6a57_before_1088_0x90df02551bB792286e8D4f13E0e357b4Bf1D6a57_after.md
@@ -1,17 +1,10 @@
+## Raw diff
+
+```json
 {
-  "chainId": 1088,
-  "eModes": {},
-  "poolConfig": {
-    "oracle": "0x38D36e85E47eA6ff0d18B0adF12E5fC8984A6f8e",
-    "pool": "0x90df02551bB792286e8D4f13E0e357b4Bf1D6a57",
-    "poolAddressesProvider": "0xB9FABd7500B2C6781c35Dd48d54f81fc2299D7AF",
-    "poolConfigurator": "0x69FEE8F261E004453BE0800BC9039717528645A6",
-    "priceOracleSentinel": "0x2B5EA1604BAbb7B730120950Cb13951f3525828A",
-    "protocolDataProvider": "0x602BeF1d4c381e5a29f0C562A310416A73D8Be19"
-  },
   "raw": {
     "0x0110174183e13d5ea59d7512226c5d5a47ba2c40": {
-      "label": null,
+      "label": "AaveV3Metis.ASSETS.Metis.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -46,12 +39,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000089ad0feb750d6fd3f8ee556a34a6806ffb6de0d7",
-          "newValue": "0x0000000000000000000000004220b754a0e6a08e6c7fdcecfe05f47daf8141cb"
+          "newValue": "0x0000000000000000000000004220b754a0e6a08e6c7fdcecfe05f47daf8141cb",
+          "label": "Implementation slot"
         }
       }
     },
     "0x13bd89af338f3c7eae9a75852fc2f1ca28b4ddbf": {
-      "label": null,
+      "label": "AaveV3Metis.ASSETS.mDAI.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -86,12 +80,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000089ad0feb750d6fd3f8ee556a34a6806ffb6de0d7",
-          "newValue": "0x0000000000000000000000004220b754a0e6a08e6c7fdcecfe05f47daf8141cb"
+          "newValue": "0x0000000000000000000000004220b754a0e6a08e6c7fdcecfe05f47daf8141cb",
+          "label": "Implementation slot"
         }
       }
     },
     "0x2233f8a66a728fba6e1dc95570b25360d07d5524": {
-      "label": null,
+      "label": "GovernanceV3Metis.PAYLOADS_CONTROLLER",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -107,7 +102,7 @@
       }
     },
     "0x571171a7ef1e3c8c83d47ef1a50e225e9c351380": {
-      "label": null,
+      "label": "AaveV3Metis.ASSETS.mUSDC.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -142,12 +137,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000089ad0feb750d6fd3f8ee556a34a6806ffb6de0d7",
-          "newValue": "0x0000000000000000000000004220b754a0e6a08e6c7fdcecfe05f47daf8141cb"
+          "newValue": "0x0000000000000000000000004220b754a0e6a08e6c7fdcecfe05f47daf8141cb",
+          "label": "Implementation slot"
         }
       }
     },
     "0x6b45dce8af4fe5ab3bfcf030d8fb57718eab54e5": {
-      "label": null,
+      "label": "AaveV3Metis.ASSETS.mUSDT.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -182,12 +178,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000089ad0feb750d6fd3f8ee556a34a6806ffb6de0d7",
-          "newValue": "0x0000000000000000000000004220b754a0e6a08e6c7fdcecfe05f47daf8141cb"
+          "newValue": "0x0000000000000000000000004220b754a0e6a08e6c7fdcecfe05f47daf8141cb",
+          "label": "Implementation slot"
         }
       }
     },
     "0x7314ef2ca509490f65f52cc8fc9e0675c66390b8": {
-      "label": null,
+      "label": "AaveV3Metis.ASSETS.Metis.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -222,12 +219,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000a6bed0d6a7bc8845ccf69f9b09d4429fd9c88c30",
-          "newValue": "0x000000000000000000000000181970e1250772ca549c9bb0c2a3d5a0fd3a84cb"
+          "newValue": "0x000000000000000000000000181970e1250772ca549c9bb0c2a3d5a0fd3a84cb",
+          "label": "Implementation slot"
         }
       }
     },
     "0x85abaddcae06efee2cb5f75f33b6471759efde24": {
-      "label": null,
+      "label": "AaveV3Metis.ASSETS.mDAI.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -262,12 +260,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000a6bed0d6a7bc8845ccf69f9b09d4429fd9c88c30",
-          "newValue": "0x000000000000000000000000181970e1250772ca549c9bb0c2a3d5a0fd3a84cb"
+          "newValue": "0x000000000000000000000000181970e1250772ca549c9bb0c2a3d5a0fd3a84cb",
+          "label": "Implementation slot"
         }
       }
     },
     "0x885c8aec5867571582545f894a5906971db9bf27": {
-      "label": null,
+      "label": "AaveV3Metis.ASSETS.mUSDC.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -302,12 +301,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000a6bed0d6a7bc8845ccf69f9b09d4429fd9c88c30",
-          "newValue": "0x000000000000000000000000181970e1250772ca549c9bb0c2a3d5a0fd3a84cb"
+          "newValue": "0x000000000000000000000000181970e1250772ca549c9bb0c2a3d5a0fd3a84cb",
+          "label": "Implementation slot"
         }
       }
     },
     "0x8acae35059c9ae27709028ff6689386a44c09f3a": {
-      "label": null,
+      "label": "AaveV3Metis.ASSETS.WETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -342,12 +342,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000a6bed0d6a7bc8845ccf69f9b09d4429fd9c88c30",
-          "newValue": "0x000000000000000000000000181970e1250772ca549c9bb0c2a3d5a0fd3a84cb"
+          "newValue": "0x000000000000000000000000181970e1250772ca549c9bb0c2a3d5a0fd3a84cb",
+          "label": "Implementation slot"
         }
       }
     },
     "0x8bb19e3dd277a73d4a95ee434f14ce4b92898421": {
-      "label": null,
+      "label": "AaveV3Metis.ASSETS.WETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -382,12 +383,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000089ad0feb750d6fd3f8ee556a34a6806ffb6de0d7",
-          "newValue": "0x0000000000000000000000004220b754a0e6a08e6c7fdcecfe05f47daf8141cb"
+          "newValue": "0x0000000000000000000000004220b754a0e6a08e6c7fdcecfe05f47daf8141cb",
+          "label": "Implementation slot"
         }
       }
     },
     "0x90df02551bb792286e8d4f13e0e357b4bf1d6a57": {
-      "label": null,
+      "label": "AaveV3Metis.POOL",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -402,12 +404,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000375ca009c6a4a3127d4616b4d8fb61085723ad31",
-          "newValue": "0x000000000000000000000000da8b57063b948ad94704d59442a11885b6be8d24"
+          "newValue": "0x000000000000000000000000da8b57063b948ad94704d59442a11885b6be8d24",
+          "label": "Implementation slot"
         }
       }
     },
     "0xd9fa75d14c26720d5ce7ee2530793a823e8f07b9": {
-      "label": null,
+      "label": "AaveV3Metis.ASSETS.mUSDT.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -442,228 +445,11 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000a6bed0d6a7bc8845ccf69f9b09d4429fd9c88c30",
-          "newValue": "0x000000000000000000000000181970e1250772ca549c9bb0c2a3d5a0fd3a84cb"
+          "newValue": "0x000000000000000000000000181970e1250772ca549c9bb0c2a3d5a0fd3a84cb",
+          "label": "Implementation slot"
         }
       }
     }
-  },
-  "reserves": {
-    "0x420000000000000000000000000000000000000A": {
-      "aToken": "0x8acAe35059C9aE27709028fF6689386a44c09f3a",
-      "aTokenName": "Aave Metis WETH",
-      "aTokenSymbol": "aMetWETH",
-      "aTokenUnderlyingBalance": "1164174392415955926816",
-      "borrowCap": 720,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 4,
-      "interestRateStrategy": "0x258625AfDe0073f5Bbce50C0305f4C23B16C7F3a",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10750,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 8300,
-      "ltv": 8000,
-      "oracle": "0x3BBe70e2F96c87aEce7F67A2b0178052f62E37fE",
-      "oracleDecimals": 8,
-      "oracleDescription": "ETH / USD",
-      "oracleLatestAnswer": "380814405200",
-      "reserveFactor": 1500,
-      "supplyCap": 2300,
-      "symbol": "WETH",
-      "underlying": "0x420000000000000000000000000000000000000A",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x8Bb19e3DD277a73D4A95EE434F14cE4B92898421",
-      "variableDebtTokenName": "Aave Metis Variable Debt WETH",
-      "variableDebtTokenSymbol": "variableDebtMetWETH",
-      "virtualBalance": "1164174328269739006099"
-    },
-    "0x4c078361FC9BbB78DF910800A991C7c3DD2F6ce0": {
-      "aToken": "0x85ABAdDcae06efee2CB5F75f33b6471759eFDE24",
-      "aTokenName": "Aave Metis mDAI",
-      "aTokenSymbol": "aMetmDAI",
-      "aTokenUnderlyingBalance": "55145144052993170369249",
-      "borrowCap": 900000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 0,
-      "interestRateStrategy": "0x258625AfDe0073f5Bbce50C0305f4C23B16C7F3a",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7700,
-      "ltv": 6300,
-      "oracle": "0xf577E512687C83706ccfeD31C1939C75E8ea966F",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped mDAI/USD",
-      "oracleLatestAnswer": "100001990",
-      "reserveFactor": 2500,
-      "supplyCap": 1000000,
-      "symbol": "m.DAI",
-      "underlying": "0x4c078361FC9BbB78DF910800A991C7c3DD2F6ce0",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x13Bd89aF338f3c7eAE9a75852fC2F1ca28B4DDbF",
-      "variableDebtTokenName": "Aave Metis Variable Debt mDAI",
-      "variableDebtTokenSymbol": "variableDebtMetmDAI",
-      "virtualBalance": "55144011442015295112335"
-    },
-    "0xDeadDeAddeAddEAddeadDEaDDEAdDeaDDeAD0000": {
-      "aToken": "0x7314Ef2CA509490f65F52CC8FC9E0675C66390b8",
-      "aTokenName": "Aave Metis METIS",
-      "aTokenSymbol": "aMetMETIS",
-      "aTokenUnderlyingBalance": "206181468455488708906359",
-      "borrowCap": 32000,
-      "borrowingEnabled": true,
-      "debtCeiling": 100000000,
-      "decimals": 18,
-      "id": 1,
-      "interestRateStrategy": "0x258625AfDe0073f5Bbce50C0305f4C23B16C7F3a",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 11000,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 4000,
-      "ltv": 3000,
-      "oracle": "0xD4a5Bb03B5D66d9bf81507379302Ac2C2DFDFa6D",
-      "oracleDecimals": 8,
-      "oracleDescription": "METIS / USD",
-      "oracleLatestAnswer": "1990999553",
-      "reserveFactor": 1500,
-      "supplyCap": 600000,
-      "symbol": "Metis",
-      "underlying": "0xDeadDeAddeAddEAddeadDEaDDEAdDeaDDeAD0000",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x0110174183e13D5Ea59D7512226c5D5A47bA2c40",
-      "variableDebtTokenName": "Aave Metis Variable Debt METIS",
-      "variableDebtTokenSymbol": "variableDebtMetMETIS",
-      "virtualBalance": "206181468426479608630105"
-    },
-    "0xEA32A96608495e54156Ae48931A7c20f0dcc1a21": {
-      "aToken": "0x885C8AEC5867571582545F894A5906971dB9bf27",
-      "aTokenName": "Aave Metis mUSDC",
-      "aTokenSymbol": "aMetmUSDC",
-      "aTokenUnderlyingBalance": "914541535797",
-      "borrowCap": 9000000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 2,
-      "interestRateStrategy": "0x258625AfDe0073f5Bbce50C0305f4C23B16C7F3a",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 8300,
-      "ltv": 7500,
-      "oracle": "0x0b9cA640284cf2636577703f785D5aEEc466BC56",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped mUSDC/USD",
-      "oracleLatestAnswer": "99985226",
-      "reserveFactor": 1000,
-      "supplyCap": 10000000,
-      "symbol": "m.USDC",
-      "underlying": "0xEA32A96608495e54156Ae48931A7c20f0dcc1a21",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x571171a7EF1e3c8c83d47EF1a50E225E9c351380",
-      "variableDebtTokenName": "Aave Metis Variable Debt mUSDC",
-      "variableDebtTokenSymbol": "variableDebtMetmUSDC",
-      "virtualBalance": "914539922710"
-    },
-    "0xbB06DCA3AE6887fAbF931640f67cab3e3a16F4dC": {
-      "aToken": "0xd9fa75D14c26720d5ce7eE2530793a823e8f07b9",
-      "aTokenName": "Aave Metis mUSDT",
-      "aTokenSymbol": "aMetmUSDT",
-      "aTokenUnderlyingBalance": "528483127454",
-      "borrowCap": 4000000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 3,
-      "interestRateStrategy": "0x258625AfDe0073f5Bbce50C0305f4C23B16C7F3a",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7800,
-      "ltv": 7500,
-      "oracle": "0x433636CB0136Cfd75145ccca608Bb548E6C037dE",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped mUSDT/USD",
-      "oracleLatestAnswer": "100029000",
-      "reserveFactor": 1000,
-      "supplyCap": 4500000,
-      "symbol": "m.USDT",
-      "underlying": "0xbB06DCA3AE6887fAbF931640f67cab3e3a16F4dC",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x6B45DcE8aF4fE5Ab3bFCF030d8fB57718eAB54e5",
-      "variableDebtTokenName": "Aave Metis Variable Debt mUSDT",
-      "variableDebtTokenSymbol": "variableDebtMetmUSDT",
-      "virtualBalance": "528472917215"
-    }
-  },
-  "strategies": {
-    "0x420000000000000000000000000000000000000A": {
-      "address": "0x258625AfDe0073f5Bbce50C0305f4C23B16C7F3a",
-      "baseVariableBorrowRate": "10000000000000000000000000",
-      "maxVariableBorrowRate": "837000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "27000000000000000000000000",
-      "variableRateSlope2": "800000000000000000000000000"
-    },
-    "0x4c078361FC9BbB78DF910800A991C7c3DD2F6ce0": {
-      "address": "0x258625AfDe0073f5Bbce50C0305f4C23B16C7F3a",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "560000000000000000000000000",
-      "optimalUsageRatio": "800000000000000000000000000",
-      "variableRateSlope1": "60000000000000000000000000",
-      "variableRateSlope2": "500000000000000000000000000"
-    },
-    "0xDeadDeAddeAddEAddeadDEaDDEAdDeaDDeAD0000": {
-      "address": "0x258625AfDe0073f5Bbce50C0305f4C23B16C7F3a",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3070000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0xEA32A96608495e54156Ae48931A7c20f0dcc1a21": {
-      "address": "0x258625AfDe0073f5Bbce50C0305f4C23B16C7F3a",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "460000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "60000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    },
-    "0xbB06DCA3AE6887fAbF931640f67cab3e3a16F4dC": {
-      "address": "0x258625AfDe0073f5Bbce50C0305f4C23B16C7F3a",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "460000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "60000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    }
   }
 }
+```
