--- a/diffs/1868_0xDd3d7A7d03D9fD9ef45f3E587287922eF65CA38B_before_1868_0xDd3d7A7d03D9fD9ef45f3E587287922eF65CA38B_after.md
+++ b/diffs/1868_0xDd3d7A7d03D9fD9ef45f3E587287922eF65CA38B_before_1868_0xDd3d7A7d03D9fD9ef45f3E587287922eF65CA38B_after.md
@@ -1,17 +1,10 @@
+## Raw diff
+
+```json
 {
-  "chainId": 1868,
-  "eModes": {},
-  "poolConfig": {
-    "oracle": "0x20040a64612555042335926d72B4E5F667a67fA1",
-    "pool": "0xDd3d7A7d03D9fD9ef45f3E587287922eF65CA38B",
-    "poolAddressesProvider": "0x82405D1a189bd6cE4667809C35B37fBE136A4c5B",
-    "poolConfigurator": "0x1607FCeEc8dEbA4d5Da66D620b2363066d025a02",
-    "priceOracleSentinel": "0xc0Bac16A64FbAa7EE6483bD12a759e28cD13dcBe",
-    "protocolDataProvider": "0x4a24b44b252db149B5B9BCec4dc3c2752807d626"
-  },
   "raw": {
     "0x1bd45cc20ce61be344a64218e6ade01e72b08f39": {
-      "label": null,
+      "label": "AaveV3Soneium.ASSETS.WETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -46,12 +39,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000d727547f49612f4590b43bf63f0259ef38a7a488",
-          "newValue": "0x000000000000000000000000102eaa833530eb822611adc19a9b9dc029eb570d"
+          "newValue": "0x000000000000000000000000102eaa833530eb822611adc19a9b9dc029eb570d",
+          "label": "Implementation slot"
         }
       }
     },
     "0x44d73d7c4b2f98f426bf8b5e87628d9ee38ef0cf": {
-      "label": null,
+      "label": "GovernanceV3Soneium.PAYLOADS_CONTROLLER",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -67,7 +61,7 @@
       }
     },
     "0xb2c9e934a55b58d20496a5019f8722a96d8a44d8": {
-      "label": null,
+      "label": "AaveV3Soneium.ASSETS.USDCe.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -102,12 +96,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000d727547f49612f4590b43bf63f0259ef38a7a488",
-          "newValue": "0x000000000000000000000000102eaa833530eb822611adc19a9b9dc029eb570d"
+          "newValue": "0x000000000000000000000000102eaa833530eb822611adc19a9b9dc029eb570d",
+          "label": "Implementation slot"
         }
       }
     },
     "0xb3b6f42ef71ddd9348136ffbdf02b545c0d2b799": {
-      "label": null,
+      "label": "AaveV3Soneium.ASSETS.USDT.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -142,12 +137,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000057c9e3bebfb67d1af9d06a3277a591b6cad8f66a",
-          "newValue": "0x000000000000000000000000bddadce137d6079d380a7ffe993b468943c292c6"
+          "newValue": "0x000000000000000000000000bddadce137d6079d380a7ffe993b468943c292c6",
+          "label": "Implementation slot"
         }
       }
     },
     "0xbab0366adda6d2845c6bb5db4339a824350d24f7": {
-      "label": null,
+      "label": "AaveV3Soneium.ASSETS.USDT.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -182,12 +178,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000d727547f49612f4590b43bf63f0259ef38a7a488",
-          "newValue": "0x000000000000000000000000102eaa833530eb822611adc19a9b9dc029eb570d"
+          "newValue": "0x000000000000000000000000102eaa833530eb822611adc19a9b9dc029eb570d",
+          "label": "Implementation slot"
         }
       }
     },
     "0xc52375a5a04c0abe5a6ca5f3a344be2415ef54db": {
-      "label": null,
+      "label": "AaveV3Soneium.ASSETS.WETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -222,12 +219,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000057c9e3bebfb67d1af9d06a3277a591b6cad8f66a",
-          "newValue": "0x000000000000000000000000bddadce137d6079d380a7ffe993b468943c292c6"
+          "newValue": "0x000000000000000000000000bddadce137d6079d380a7ffe993b468943c292c6",
+          "label": "Implementation slot"
         }
       }
     },
     "0xcce2594ea5bc482db9b4826ce25d0764fe56bfd8": {
-      "label": null,
+      "label": "AaveV3Soneium.ASSETS.USDCe.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -262,7 +260,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000057c9e3bebfb67d1af9d06a3277a591b6cad8f66a",
-          "newValue": "0x000000000000000000000000bddadce137d6079d380a7ffe993b468943c292c6"
+          "newValue": "0x000000000000000000000000bddadce137d6079d380a7ffe993b468943c292c6",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520536f6e6569756d205661726961626c652044656274205553444365",
@@ -271,7 +270,7 @@
       }
     },
     "0xdd3d7a7d03d9fd9ef45f3e587287922ef65ca38b": {
-      "label": null,
+      "label": "AaveV3Soneium.POOL",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -286,142 +285,11 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000313b8c648cca50704b37ccf705dc77f7bcc5870d",
-          "newValue": "0x00000000000000000000000093c49d814901255ea04b059cd31cf7c19964d0b4"
+          "newValue": "0x00000000000000000000000093c49d814901255ea04b059cd31cf7c19964d0b4",
+          "label": "Implementation slot"
         }
       }
     }
-  },
-  "reserves": {
-    "0x3A337a6adA9d885b6Ad95ec48F9b75f197b5AE35": {
-      "aToken": "0xBAB0366ADdA6d2845c6BB5db4339A824350d24F7",
-      "aTokenName": "Aave Soneium USDT",
-      "aTokenSymbol": "aSoneUSDT",
-      "aTokenUnderlyingBalance": "4448949259",
-      "borrowCap": 4500000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 2,
-      "interestRateStrategy": "0x486C2D3F59E4d72f3cAa301a7eF19E3db657F5b0",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7800,
-      "ltv": 7500,
-      "oracle": "0x01bcEb741614D4388028EaF3284DCB04386c30D2",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDT / USD",
-      "oracleLatestAnswer": "100025499",
-      "reserveFactor": 1000,
-      "supplyCap": 5000000,
-      "symbol": "USDT",
-      "underlying": "0x3A337a6adA9d885b6Ad95ec48F9b75f197b5AE35",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xb3B6f42Ef71DDd9348136FFBdF02B545c0d2B799",
-      "variableDebtTokenName": "Aave Soneium Variable Debt USDT",
-      "variableDebtTokenSymbol": "variableDebtSoneUSDT",
-      "virtualBalance": "4448949259"
-    },
-    "0x4200000000000000000000000000000000000006": {
-      "aToken": "0x1bD45Cc20CE61BE344A64218E6Ade01E72b08f39",
-      "aTokenName": "Aave Soneium WETH",
-      "aTokenSymbol": "aSoneWETH",
-      "aTokenUnderlyingBalance": "238068911320881667156",
-      "borrowCap": 720,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 0,
-      "interestRateStrategy": "0x486C2D3F59E4d72f3cAa301a7eF19E3db657F5b0",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10600,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 8300,
-      "ltv": 8000,
-      "oracle": "0x291cF980BA12505D65ee01BDe0882F1d5e533525",
-      "oracleDecimals": 8,
-      "oracleDescription": "ETH / USD",
-      "oracleLatestAnswer": "377988580000",
-      "reserveFactor": 1500,
-      "supplyCap": 800,
-      "symbol": "WETH",
-      "underlying": "0x4200000000000000000000000000000000000006",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xC52375A5A04C0ABe5a6Ca5F3a344be2415EF54dB",
-      "variableDebtTokenName": "Aave Soneium Variable Debt WETH",
-      "variableDebtTokenSymbol": "variableDebtSoneWETH",
-      "virtualBalance": "238068911320881667156"
-    },
-    "0xbA9986D2381edf1DA03B0B9c1f8b00dc4AacC369": {
-      "aToken": "0xb2C9E934A55B58D20496A5019F8722a96d8A44d8",
-      "aTokenName": "Aave Soneium USDCe",
-      "aTokenSymbol": "aSoneUSDCe",
-      "aTokenUnderlyingBalance": "499616869428",
-      "borrowCap": 7200000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 1,
-      "interestRateStrategy": "0x486C2D3F59E4d72f3cAa301a7eF19E3db657F5b0",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7800,
-      "ltv": 7500,
-      "oracle": "0xe9d6696fc74A8ef545D2c9C842f820763407E778",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDC / USD",
-      "oracleLatestAnswer": "99988000",
-      "reserveFactor": 1000,
-      "supplyCap": 8000000,
-      "symbol": "USDC.e",
-      "underlying": "0xbA9986D2381edf1DA03B0B9c1f8b00dc4AacC369",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xccE2594ea5bC482DB9b4826Ce25d0764fE56BfD8",
-      "variableDebtTokenName": "Aave Soneium Variable Debt USDCe",
-      "variableDebtTokenSymbol": "variableDebtSoneUSDCe",
-      "virtualBalance": "499616869428"
-    }
-  },
-  "strategies": {
-    "0x3A337a6adA9d885b6Ad95ec48F9b75f197b5AE35": {
-      "address": "0x486C2D3F59E4d72f3cAa301a7eF19E3db657F5b0",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "455000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    },
-    "0x4200000000000000000000000000000000000006": {
-      "address": "0x486C2D3F59E4d72f3cAa301a7eF19E3db657F5b0",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "827000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "27000000000000000000000000",
-      "variableRateSlope2": "800000000000000000000000000"
-    },
-    "0xbA9986D2381edf1DA03B0B9c1f8b00dc4AacC369": {
-      "address": "0x486C2D3F59E4d72f3cAa301a7eF19E3db657F5b0",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "455000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    }
   }
 }
+```
