--- a/diffs/42220_0x3E59A31363E2ad014dcbc521c4a0d5757d9f3402_before_42220_0x3E59A31363E2ad014dcbc521c4a0d5757d9f3402_after.md
+++ b/diffs/42220_0x3E59A31363E2ad014dcbc521c4a0d5757d9f3402_before_42220_0x3E59A31363E2ad014dcbc521c4a0d5757d9f3402_after.md
@@ -1,17 +1,10 @@
+## Raw diff
+
+```json
 {
-  "chainId": 42220,
-  "eModes": {},
-  "poolConfig": {
-    "oracle": "0x1e693D088ceFD1E95ba4c4a5F7EeA41a1Ec37e8b",
-    "pool": "0x3E59A31363E2ad014dcbc521c4a0d5757d9f3402",
-    "poolAddressesProvider": "0x9F7Cf9417D5251C59fE94fB9147feEe1aAd9Cea5",
-    "poolConfigurator": "0x7567E3434CC1BEf724AB595e6072367Ef4914691",
-    "priceOracleSentinel": "0x0000000000000000000000000000000000000000",
-    "protocolDataProvider": "0x2e0f8D3B1631296cC7c56538D6Eb6032601E15ED"
-  },
   "raw": {
     "0x05ee3d1fbacbdba1259946033cd7a42fdfcccf0d": {
-      "label": null,
+      "label": "AaveV3Celo.ASSETS.cUSD.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -46,12 +39,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000ac5d1ff220ccf50022bb0bad780438216cac36be",
-          "newValue": "0x000000000000000000000000f75c9a2ba3a649e9b4faa788b345ea7178cc352b"
+          "newValue": "0x000000000000000000000000f75c9a2ba3a649e9b4faa788b345ea7178cc352b",
+          "label": "Implementation slot"
         }
       }
     },
     "0x34c02571094e08e935b8cf8dc10f1ad6795f1f81": {
-      "label": null,
+      "label": "AaveV3Celo.ASSETS.cEUR.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -86,12 +80,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009041042818a3d01eaa0115e55b2c2235c986adc5",
-          "newValue": "0x000000000000000000000000444e85e29f3417e0df6b697bfdfe5e9a96b550e5"
+          "newValue": "0x000000000000000000000000444e85e29f3417e0df6b697bfdfe5e9a96b550e5",
+          "label": "Implementation slot"
         }
       }
     },
     "0x3e59a31363e2ad014dcbc521c4a0d5757d9f3402": {
-      "label": null,
+      "label": "AaveV3Celo.POOL",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -106,12 +101,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000f864eaa55fef9c7db73dfc56e0a2e05bdd824226",
-          "newValue": "0x000000000000000000000000ab1cfd836aba203d314514357ea0fb6f1373fe1e"
+          "newValue": "0x000000000000000000000000ab1cfd836aba203d314514357ea0fb6f1373fe1e",
+          "label": "Implementation slot"
         }
       }
     },
     "0x5c2b7eb5886b3cec5cce1019e34493da33291af5": {
-      "label": null,
+      "label": "AaveV3Celo.ASSETS.cEUR.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -146,12 +142,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000ac5d1ff220ccf50022bb0bad780438216cac36be",
-          "newValue": "0x000000000000000000000000f75c9a2ba3a649e9b4faa788b345ea7178cc352b"
+          "newValue": "0x000000000000000000000000f75c9a2ba3a649e9b4faa788b345ea7178cc352b",
+          "label": "Implementation slot"
         }
       }
     },
     "0x6508cff7c5fba053af00a4e894500e6fa00274b7": {
-      "label": null,
+      "label": "AaveV3Celo.ASSETS.WETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -186,12 +183,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000ac5d1ff220ccf50022bb0bad780438216cac36be",
-          "newValue": "0x000000000000000000000000f75c9a2ba3a649e9b4faa788b345ea7178cc352b"
+          "newValue": "0x000000000000000000000000f75c9a2ba3a649e9b4faa788b345ea7178cc352b",
+          "label": "Implementation slot"
         }
       }
     },
     "0xaea37b42955de2ba2e4af6581e46349bcd3ea2d6": {
-      "label": null,
+      "label": "AaveV3Celo.ASSETS.CELO.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -226,12 +224,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000ac5d1ff220ccf50022bb0bad780438216cac36be",
-          "newValue": "0x000000000000000000000000f75c9a2ba3a649e9b4faa788b345ea7178cc352b"
+          "newValue": "0x000000000000000000000000f75c9a2ba3a649e9b4faa788b345ea7178cc352b",
+          "label": "Implementation slot"
         }
       }
     },
     "0xbba98352628b0b0c4b40583f593ffcb630935a45": {
-      "label": null,
+      "label": "AaveV3Celo.ASSETS.cUSD.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -266,12 +265,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009041042818a3d01eaa0115e55b2c2235c986adc5",
-          "newValue": "0x000000000000000000000000444e85e29f3417e0df6b697bfdfe5e9a96b550e5"
+          "newValue": "0x000000000000000000000000444e85e29f3417e0df6b697bfdfe5e9a96b550e5",
+          "label": "Implementation slot"
         }
       }
     },
     "0xc3e77dc389537db1eec7c33b95cf3beeca71a209": {
-      "label": null,
+      "label": "AaveV3Celo.ASSETS.CELO.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -306,12 +306,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009041042818a3d01eaa0115e55b2c2235c986adc5",
-          "newValue": "0x000000000000000000000000444e85e29f3417e0df6b697bfdfe5e9a96b550e5"
+          "newValue": "0x000000000000000000000000444e85e29f3417e0df6b697bfdfe5e9a96b550e5",
+          "label": "Implementation slot"
         }
       }
     },
     "0xdbe517c0fa6467873b684eccbed77217e471e862": {
-      "label": null,
+      "label": "AaveV3Celo.ASSETS.USDC.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -346,12 +347,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000ac5d1ff220ccf50022bb0bad780438216cac36be",
-          "newValue": "0x000000000000000000000000f75c9a2ba3a649e9b4faa788b345ea7178cc352b"
+          "newValue": "0x000000000000000000000000f75c9a2ba3a649e9b4faa788b345ea7178cc352b",
+          "label": "Implementation slot"
         }
       }
     },
     "0xdee98402a302e4d707fb9bf2bac66faeec31e8df": {
-      "label": null,
+      "label": "AaveV3Celo.ASSETS.USDT.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -386,12 +388,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009041042818a3d01eaa0115e55b2c2235c986adc5",
-          "newValue": "0x000000000000000000000000444e85e29f3417e0df6b697bfdfe5e9a96b550e5"
+          "newValue": "0x000000000000000000000000444e85e29f3417e0df6b697bfdfe5e9a96b550e5",
+          "label": "Implementation slot"
         }
       }
     },
     "0xe15324a9887999803b931ac45aa89a94a9750052": {
-      "label": null,
+      "label": "AaveV3Celo.ASSETS.USDT.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -426,12 +429,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000ac5d1ff220ccf50022bb0bad780438216cac36be",
-          "newValue": "0x000000000000000000000000f75c9a2ba3a649e9b4faa788b345ea7178cc352b"
+          "newValue": "0x000000000000000000000000f75c9a2ba3a649e9b4faa788b345ea7178cc352b",
+          "label": "Implementation slot"
         }
       }
     },
     "0xe48e10834c04e394a04bf22a565d063d40b9fa42": {
-      "label": null,
+      "label": "GovernanceV3Celo.PAYLOADS_CONTROLLER",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -447,7 +451,7 @@
       }
     },
     "0xf385280f36e009c157697d25e0b802efabfd789c": {
-      "label": null,
+      "label": "AaveV3Celo.ASSETS.WETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -482,12 +486,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009041042818a3d01eaa0115e55b2c2235c986adc5",
-          "newValue": "0x000000000000000000000000444e85e29f3417e0df6b697bfdfe5e9a96b550e5"
+          "newValue": "0x000000000000000000000000444e85e29f3417e0df6b697bfdfe5e9a96b550e5",
+          "label": "Implementation slot"
         }
       }
     },
     "0xff8309b9e99bfd2d4021bc71a362abd93dbd4785": {
-      "label": null,
+      "label": "AaveV3Celo.ASSETS.USDC.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -522,271 +527,11 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009041042818a3d01eaa0115e55b2c2235c986adc5",
-          "newValue": "0x000000000000000000000000444e85e29f3417e0df6b697bfdfe5e9a96b550e5"
+          "newValue": "0x000000000000000000000000444e85e29f3417e0df6b697bfdfe5e9a96b550e5",
+          "label": "Implementation slot"
         }
       }
     }
-  },
-  "reserves": {
-    "0x471EcE3750Da237f93B8E339c536989b8978a438": {
-      "aToken": "0xC3e77dC389537Db1EEc7C33B95Cf3beECA71A209",
-      "aTokenName": "Aave Celo CELO",
-      "aTokenSymbol": "aCelCELO",
-      "aTokenUnderlyingBalance": "2369353655370311545985448",
-      "borrowCap": 100000,
-      "borrowingEnabled": true,
-      "debtCeiling": 50000000,
-      "decimals": 18,
-      "id": 4,
-      "interestRateStrategy": "0x8B62D241Bf59f40991DCd18531683156d7013355",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 11000,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 6100,
-      "ltv": 5500,
-      "oracle": "0x0568fD19986748cEfF3301e55c0eb1E729E0Ab7e",
-      "oracleDecimals": 8,
-      "oracleDescription": "CELO / USD",
-      "oracleLatestAnswer": "39568307",
-      "reserveFactor": 2000,
-      "supplyCap": 3000000,
-      "symbol": "CELO",
-      "underlying": "0x471EcE3750Da237f93B8E339c536989b8978a438",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xaEa37B42955De2Ba2E4AF6581E46349bCD3Ea2d6",
-      "variableDebtTokenName": "Aave Celo Variable Debt CELO",
-      "variableDebtTokenSymbol": "variableDebtCelCELO",
-      "virtualBalance": "2369353655370311545985448"
-    },
-    "0x48065fbBE25f71C9282ddf5e1cD6D6A887483D5e": {
-      "aToken": "0xDeE98402A302e4D707fB9bf2bac66fAEEc31e8Df",
-      "aTokenName": "Aave Celo USDT",
-      "aTokenSymbol": "aCelUSDT",
-      "aTokenUnderlyingBalance": "7989568734708",
-      "borrowCap": 3600000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 1,
-      "interestRateStrategy": "0x8B62D241Bf59f40991DCd18531683156d7013355",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7800,
-      "ltv": 7500,
-      "oracle": "0x6e3d991C965364481796116dE68A8036d1b3Ecd0",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDT/USD",
-      "oracleLatestAnswer": "100028428",
-      "reserveFactor": 2000,
-      "supplyCap": 12000000,
-      "symbol": "USD₮",
-      "underlying": "0x48065fbBE25f71C9282ddf5e1cD6D6A887483D5e",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xE15324a9887999803b931Ac45aa89a94A9750052",
-      "variableDebtTokenName": "Aave Celo Variable Debt USDT",
-      "variableDebtTokenSymbol": "variableDebtCelUSDT",
-      "virtualBalance": "7989568734708"
-    },
-    "0x765DE816845861e75A25fCA122bb6898B8B1282a": {
-      "aToken": "0xBba98352628B0B0c4b40583F593fFCb630935a45",
-      "aTokenName": "Aave Celo cUSD",
-      "aTokenSymbol": "aCelcUSD",
-      "aTokenUnderlyingBalance": "162423851567311127691400",
-      "borrowCap": 1170000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 3,
-      "interestRateStrategy": "0x8B62D241Bf59f40991DCd18531683156d7013355",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 0,
-      "liquidationProtocolFee": 0,
-      "liquidationThreshold": 0,
-      "ltv": 0,
-      "oracle": "0xdCdA3E7E90fe827776b8FDaEa3C5977F123354DA",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped cUSD/USD",
-      "oracleLatestAnswer": "99984103",
-      "reserveFactor": 1500,
-      "supplyCap": 1300000,
-      "symbol": "cUSD",
-      "underlying": "0x765DE816845861e75A25fCA122bb6898B8B1282a",
-      "usageAsCollateralEnabled": false,
-      "variableDebtToken": "0x05Ee3d1fBACbDbA1259946033cd7A42FDFcCcF0d",
-      "variableDebtTokenName": "Aave Celo Variable Debt cUSD",
-      "variableDebtTokenSymbol": "variableDebtCelcUSD",
-      "virtualBalance": "162423851567311127691400"
-    },
-    "0xD221812de1BD094f35587EE8E174B07B6167D9Af": {
-      "aToken": "0xf385280F36e009C157697D25E0B802EfaBfd789c",
-      "aTokenName": "Aave Celo WETH",
-      "aTokenSymbol": "aCelWETH",
-      "aTokenUnderlyingBalance": "394374745609518307081",
-      "borrowCap": 450,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 5,
-      "interestRateStrategy": "0x8B62D241Bf59f40991DCd18531683156d7013355",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10750,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 8000,
-      "ltv": 7800,
-      "oracle": "0x1FcD30A73D67639c1cD89ff5746E7585731c083B",
-      "oracleDecimals": 8,
-      "oracleDescription": "ETH / USD",
-      "oracleLatestAnswer": "380986263388",
-      "reserveFactor": 1500,
-      "supplyCap": 1000,
-      "symbol": "WETH",
-      "underlying": "0xD221812de1BD094f35587EE8E174B07B6167D9Af",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x6508cff7c5FbA053Af00a4E894500e6fA00274B7",
-      "variableDebtTokenName": "Aave Celo Variable Debt WETH",
-      "variableDebtTokenSymbol": "variableDebtCelWETH",
-      "virtualBalance": "394374745609518307081"
-    },
-    "0xD8763CBa276a3738E6DE85b4b3bF5FDed6D6cA73": {
-      "aToken": "0x34c02571094e08E935B8cf8dC10F1Ad6795f1f81",
-      "aTokenName": "Aave Celo cEUR",
-      "aTokenSymbol": "aCelcEUR",
-      "aTokenUnderlyingBalance": "34608673196692260281901",
-      "borrowCap": 144000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 2,
-      "interestRateStrategy": "0x8B62D241Bf59f40991DCd18531683156d7013355",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 0,
-      "liquidationProtocolFee": 0,
-      "liquidationThreshold": 0,
-      "ltv": 0,
-      "oracle": "0x3D207061Dbe8E2473527611BFecB87Ff12b28dDa",
-      "oracleDecimals": 8,
-      "oracleDescription": "EUR / USD",
-      "oracleLatestAnswer": "116686000",
-      "reserveFactor": 1500,
-      "supplyCap": 160000,
-      "symbol": "cEUR",
-      "underlying": "0xD8763CBa276a3738E6DE85b4b3bF5FDed6D6cA73",
-      "usageAsCollateralEnabled": false,
-      "variableDebtToken": "0x5C2B7EB5886B3cEc5CCE1019E34493da33291aF5",
-      "variableDebtTokenName": "Aave Celo Variable Debt cEUR",
-      "variableDebtTokenSymbol": "variableDebtCelcEUR",
-      "virtualBalance": "34608673196692260281901"
-    },
-    "0xcebA9300f2b948710d2653dD7B07f33A8B32118C": {
-      "aToken": "0xFF8309b9e99bfd2D4021bc71a362aBD93dBd4785",
-      "aTokenName": "Aave Celo USDC",
-      "aTokenSymbol": "aCelUSDC",
-      "aTokenUnderlyingBalance": "108970113059",
-      "borrowCap": 3150000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 0,
-      "interestRateStrategy": "0x8B62D241Bf59f40991DCd18531683156d7013355",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7800,
-      "ltv": 7500,
-      "oracle": "0xBF704f2FfdB856805cE64D085cD50427823696D7",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDC/USD",
-      "oracleLatestAnswer": "99987711",
-      "reserveFactor": 1000,
-      "supplyCap": 3500000,
-      "symbol": "USDC",
-      "underlying": "0xcebA9300f2b948710d2653dD7B07f33A8B32118C",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xDbe517c0FA6467873B684eCcbED77217E471E862",
-      "variableDebtTokenName": "Aave Celo Variable Debt USDC",
-      "variableDebtTokenSymbol": "variableDebtCelUSDC",
-      "virtualBalance": "108970113059"
-    }
-  },
-  "strategies": {
-    "0x471EcE3750Da237f93B8E339c536989b8978a438": {
-      "address": "0x8B62D241Bf59f40991DCd18531683156d7013355",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "1600000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "100000000000000000000000000",
-      "variableRateSlope2": "1500000000000000000000000000"
-    },
-    "0x48065fbBE25f71C9282ddf5e1cD6D6A887483D5e": {
-      "address": "0x8B62D241Bf59f40991DCd18531683156d7013355",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "465000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "65000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    },
-    "0x765DE816845861e75A25fCA122bb6898B8B1282a": {
-      "address": "0x8B62D241Bf59f40991DCd18531683156d7013355",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "815000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "65000000000000000000000000",
-      "variableRateSlope2": "750000000000000000000000000"
-    },
-    "0xD221812de1BD094f35587EE8E174B07B6167D9Af": {
-      "address": "0x8B62D241Bf59f40991DCd18531683156d7013355",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "827000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "27000000000000000000000000",
-      "variableRateSlope2": "800000000000000000000000000"
-    },
-    "0xD8763CBa276a3738E6DE85b4b3bF5FDed6D6cA73": {
-      "address": "0x8B62D241Bf59f40991DCd18531683156d7013355",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "815000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "65000000000000000000000000",
-      "variableRateSlope2": "750000000000000000000000000"
-    },
-    "0xcebA9300f2b948710d2653dD7B07f33A8B32118C": {
-      "address": "0x8B62D241Bf59f40991DCd18531683156d7013355",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "465000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "65000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    }
   }
 }
+```
