--- a/diffs/534352_0x11fCfe756c05AD438e312a7fd934381537D3cFfe_before_534352_0x11fCfe756c05AD438e312a7fd934381537D3cFfe_after.md
+++ b/diffs/534352_0x11fCfe756c05AD438e312a7fd934381537D3cFfe_before_534352_0x11fCfe756c05AD438e312a7fd934381537D3cFfe_after.md
@@ -1,27 +1,10 @@
+## Raw diff
+
+```json
 {
-  "chainId": 534352,
-  "eModes": {
-    "1": {
-      "borrowableBitmap": "1",
-      "collateralBitmap": "13",
-      "eModeCategory": 1,
-      "label": "ETH correlated",
-      "liquidationBonus": 10100,
-      "liquidationThreshold": 9300,
-      "ltv": 9000
-    }
-  },
-  "poolConfig": {
-    "oracle": "0x04421D8C506E2fA2371a08EfAaBf791F624054F3",
-    "pool": "0x11fCfe756c05AD438e312a7fd934381537D3cFfe",
-    "poolAddressesProvider": "0x69850D0B276776781C063771b161bd8894BCdD04",
-    "poolConfigurator": "0x32BCab42a2bb5AC577D24b425D46d8b8e0Df9b7f",
-    "priceOracleSentinel": "0xfD0Ba55775C1e53f50736FA5528d8aa45FBcA391",
-    "protocolDataProvider": "0xBEa2B648f05887eCbF1d115da8b7E4A317975A51"
-  },
   "raw": {
     "0x009d88c6a6b4caa240b71c98ba93732e26f2a55a": {
-      "label": null,
+      "label": "AaveV3Scroll.ASSETS.weETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -56,12 +39,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000001ac9c8e6baeaeb33b7e550d4a031de8a5d0c0952",
-          "newValue": "0x000000000000000000000000a013127bd2ab07eb37b61dccb73866811fc09ccd"
+          "newValue": "0x000000000000000000000000a013127bd2ab07eb37b61dccb73866811fc09ccd",
+          "label": "Implementation slot"
         }
       }
     },
     "0x11fcfe756c05ad438e312a7fd934381537d3cffe": {
-      "label": null,
+      "label": "AaveV3Scroll.POOL",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -76,12 +60,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000c89a04537d4789bbd06f41124949aec7ad8e5cab",
-          "newValue": "0x000000000000000000000000ae9c8593a1568cb9bf901ce197ede885ce62348e"
+          "newValue": "0x000000000000000000000000ae9c8593a1568cb9bf901ce197ede885ce62348e",
+          "label": "Implementation slot"
         }
       }
     },
     "0x1d738a3436a8c49ceffbab7fbf04b660fb528cbd": {
-      "label": null,
+      "label": "AaveV3Scroll.ASSETS.USDC.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -116,12 +101,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000a9e5f0cc15d04d890ec74b33c45836f84786145e",
-          "newValue": "0x00000000000000000000000067d758f837f2660d76b90d820aadde54aa7eb062"
+          "newValue": "0x00000000000000000000000067d758f837f2660d76b90d820aadde54aa7eb062",
+          "label": "Implementation slot"
         }
       }
     },
     "0x25718130c2a8eb94e2e1fafb5f1cdd4b459acf64": {
-      "label": null,
+      "label": "AaveV3Scroll.ASSETS.SCR.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -156,12 +142,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000a9e5f0cc15d04d890ec74b33c45836f84786145e",
-          "newValue": "0x00000000000000000000000067d758f837f2660d76b90d820aadde54aa7eb062"
+          "newValue": "0x00000000000000000000000067d758f837f2660d76b90d820aadde54aa7eb062",
+          "label": "Implementation slot"
         }
       }
     },
     "0x3d2e209af5bfa79297c88d6b57f89d792f6e28ee": {
-      "label": null,
+      "label": "AaveV3Scroll.ASSETS.USDC.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -196,12 +183,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000001ac9c8e6baeaeb33b7e550d4a031de8a5d0c0952",
-          "newValue": "0x000000000000000000000000a013127bd2ab07eb37b61dccb73866811fc09ccd"
+          "newValue": "0x000000000000000000000000a013127bd2ab07eb37b61dccb73866811fc09ccd",
+          "label": "Implementation slot"
         }
       }
     },
     "0x5b1322eeb46240b02e20062b8f0f9908d525b09c": {
-      "label": null,
+      "label": "AaveV3Scroll.ASSETS.wstETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -236,12 +224,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000a9e5f0cc15d04d890ec74b33c45836f84786145e",
-          "newValue": "0x00000000000000000000000067d758f837f2660d76b90d820aadde54aa7eb062"
+          "newValue": "0x00000000000000000000000067d758f837f2660d76b90d820aadde54aa7eb062",
+          "label": "Implementation slot"
         }
       }
     },
     "0x6b6b41c0f8c223715f712be83cec3c37bbfdc3fe": {
-      "label": null,
+      "label": "GovernanceV3Scroll.PAYLOADS_CONTROLLER",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -257,7 +246,7 @@
       }
     },
     "0x8a035644322129800c3f747f54db0f4d3c0a2877": {
-      "label": null,
+      "label": "AaveV3Scroll.ASSETS.wstETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -292,7 +281,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000001ac9c8e6baeaeb33b7e550d4a031de8a5d0c0952",
-          "newValue": "0x000000000000000000000000a013127bd2ab07eb37b61dccb73866811fc09ccd"
+          "newValue": "0x000000000000000000000000a013127bd2ab07eb37b61dccb73866811fc09ccd",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x41617665205363726f6c6c205661726961626c65204465627420777374455448",
@@ -301,7 +291,7 @@
       }
     },
     "0xd80a5e16dbdc52bd1c947cedfa22c562be9129c8": {
-      "label": null,
+      "label": "AaveV3Scroll.ASSETS.weETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -336,12 +326,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000a9e5f0cc15d04d890ec74b33c45836f84786145e",
-          "newValue": "0x00000000000000000000000067d758f837f2660d76b90d820aadde54aa7eb062"
+          "newValue": "0x00000000000000000000000067d758f837f2660d76b90d820aadde54aa7eb062",
+          "label": "Implementation slot"
         }
       }
     },
     "0xf301805be1df81102c957f6d4ce29d2b8c056b2a": {
-      "label": null,
+      "label": "AaveV3Scroll.ASSETS.WETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -376,12 +367,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000a9e5f0cc15d04d890ec74b33c45836f84786145e",
-          "newValue": "0x00000000000000000000000067d758f837f2660d76b90d820aadde54aa7eb062"
+          "newValue": "0x00000000000000000000000067d758f837f2660d76b90d820aadde54aa7eb062",
+          "label": "Implementation slot"
         }
       }
     },
     "0xfd7344ceb1df9cf238ecd667f4a6f99c6ef44a56": {
-      "label": null,
+      "label": "AaveV3Scroll.ASSETS.WETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -416,12 +408,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000001ac9c8e6baeaeb33b7e550d4a031de8a5d0c0952",
-          "newValue": "0x000000000000000000000000a013127bd2ab07eb37b61dccb73866811fc09ccd"
+          "newValue": "0x000000000000000000000000a013127bd2ab07eb37b61dccb73866811fc09ccd",
+          "label": "Implementation slot"
         }
       }
     },
     "0xffba405bbf25b2e6c454d18165f2fd8786858c6b": {
-      "label": null,
+      "label": "AaveV3Scroll.ASSETS.SCR.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -456,228 +449,11 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000001ac9c8e6baeaeb33b7e550d4a031de8a5d0c0952",
-          "newValue": "0x000000000000000000000000a013127bd2ab07eb37b61dccb73866811fc09ccd"
+          "newValue": "0x000000000000000000000000a013127bd2ab07eb37b61dccb73866811fc09ccd",
+          "label": "Implementation slot"
         }
       }
     }
-  },
-  "reserves": {
-    "0x01f0a31698C4d065659b9bdC21B3610292a1c506": {
-      "aToken": "0xd80A5e16DBDC52Bd1C947CEDfA22c562Be9129C8",
-      "aTokenName": "Aave Scroll weETH",
-      "aTokenSymbol": "aScrweETH",
-      "aTokenUnderlyingBalance": "5773822935373111951606",
-      "borrowCap": 1,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 3,
-      "interestRateStrategy": "0xC37353E5766164D8654D3CB395acfDcA4c2E7Ddc",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10750,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7500,
-      "ltv": 7250,
-      "oracle": "0x32f924C0e0F1Abf5D1ff35B05eBc5E844dEdD2A9",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped weETH / eETH(ETH) / USD",
-      "oracleLatestAnswer": "405447136148",
-      "reserveFactor": 4500,
-      "supplyCap": 15000,
-      "symbol": "weETH",
-      "underlying": "0x01f0a31698C4d065659b9bdC21B3610292a1c506",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x009D88C6a6B4CaA240b71C98BA93732e26F2A55A",
-      "variableDebtTokenName": "Aave Scroll Variable Debt weETH",
-      "variableDebtTokenSymbol": "variableDebtScrweETH",
-      "virtualBalance": "5773822935373111951606"
-    },
-    "0x06eFdBFf2a14a7c8E15944D1F4A48F9F95F663A4": {
-      "aToken": "0x1D738a3436A8C49CefFbaB7fbF04B660fb528CbD",
-      "aTokenName": "Aave Scroll USDC",
-      "aTokenSymbol": "aScrUSDC",
-      "aTokenUnderlyingBalance": "204228422669",
-      "borrowCap": 5400000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 1,
-      "interestRateStrategy": "0xC37353E5766164D8654D3CB395acfDcA4c2E7Ddc",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7800,
-      "ltv": 7500,
-      "oracle": "0x1685D81212580DD4cDA287616C2f6F4794927e18",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDC/USD",
-      "oracleLatestAnswer": "99985408",
-      "reserveFactor": 1000,
-      "supplyCap": 6000000,
-      "symbol": "USDC",
-      "underlying": "0x06eFdBFf2a14a7c8E15944D1F4A48F9F95F663A4",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x3d2E209af5BFa79297C88D6b57F89d792F6E28EE",
-      "variableDebtTokenName": "Aave Scroll Variable Debt USDC",
-      "variableDebtTokenSymbol": "variableDebtScrUSDC",
-      "virtualBalance": "204228299801"
-    },
-    "0x5300000000000000000000000000000000000004": {
-      "aToken": "0xf301805bE1Df81102C957f6d4Ce29d2B8c056B2a",
-      "aTokenName": "Aave Scroll WETH",
-      "aTokenSymbol": "aScrWETH",
-      "aTokenUnderlyingBalance": "825095110612512255273",
-      "borrowCap": 13500,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 0,
-      "interestRateStrategy": "0xC37353E5766164D8654D3CB395acfDcA4c2E7Ddc",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10600,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 8300,
-      "ltv": 8000,
-      "oracle": "0x6bF14CB0A831078629D993FDeBcB182b21A8774C",
-      "oracleDecimals": 8,
-      "oracleDescription": "ETH / USD",
-      "oracleLatestAnswer": "377988580000",
-      "reserveFactor": 1500,
-      "supplyCap": 15000,
-      "symbol": "WETH",
-      "underlying": "0x5300000000000000000000000000000000000004",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xfD7344CeB1Df9Cf238EcD667f4A6F99c6Ef44a56",
-      "variableDebtTokenName": "Aave Scroll Variable Debt WETH",
-      "variableDebtTokenSymbol": "variableDebtScrWETH",
-      "virtualBalance": "825095109961766162480"
-    },
-    "0xd29687c813D741E2F938F4aC377128810E217b1b": {
-      "aToken": "0x25718130C2a8eb94e2e1FAFB5f1cDd4b459aCf64",
-      "aTokenName": "Aave Scroll SCR",
-      "aTokenSymbol": "aScrSCR",
-      "aTokenUnderlyingBalance": "393681985647229407696182",
-      "borrowCap": 28000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 4,
-      "interestRateStrategy": "0xC37353E5766164D8654D3CB395acfDcA4c2E7Ddc",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 0,
-      "liquidationProtocolFee": 0,
-      "liquidationThreshold": 0,
-      "ltv": 0,
-      "oracle": "0x26f6F7C468EE309115d19Aa2055db5A74F8cE7A5",
-      "oracleDecimals": 8,
-      "oracleDescription": "SCR / USD",
-      "oracleLatestAnswer": "35894000",
-      "reserveFactor": 2000,
-      "supplyCap": 750000,
-      "symbol": "SCR",
-      "underlying": "0xd29687c813D741E2F938F4aC377128810E217b1b",
-      "usageAsCollateralEnabled": false,
-      "variableDebtToken": "0xFFbA405BBF25B2e6C454d18165F2fd8786858c6B",
-      "variableDebtTokenName": "Aave Scroll Variable Debt SCR",
-      "variableDebtTokenSymbol": "variableDebtScrSCR",
-      "virtualBalance": "393681985647229407696182"
-    },
-    "0xf610A9dfB7C89644979b4A0f27063E9e7d7Cda32": {
-      "aToken": "0x5B1322eeb46240b02e20062b8F0F9908d525B09c",
-      "aTokenName": "Aave Scroll wstETH",
-      "aTokenSymbol": "aScrwstETH",
-      "aTokenUnderlyingBalance": "399242401271032079206",
-      "borrowCap": 1000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 2,
-      "interestRateStrategy": "0xC37353E5766164D8654D3CB395acfDcA4c2E7Ddc",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10700,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7900,
-      "ltv": 7500,
-      "oracle": "0x4EdAbf45e78363b8Dcd763bBbd05665c6e24975C",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped wstETH / stETH(ETH) / USD",
-      "oracleLatestAnswer": "456881406042",
-      "reserveFactor": 500,
-      "supplyCap": 2000,
-      "symbol": "wstETH",
-      "underlying": "0xf610A9dfB7C89644979b4A0f27063E9e7d7Cda32",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x8a035644322129800C3f747f54Db0F4d3c0A2877",
-      "variableDebtTokenName": "Aave Scroll Variable Debt wstETH",
-      "variableDebtTokenSymbol": "variableDebtScrwstETH",
-      "virtualBalance": "399242399936363568582"
-    }
-  },
-  "strategies": {
-    "0x01f0a31698C4d065659b9bdC21B3610292a1c506": {
-      "address": "0xC37353E5766164D8654D3CB395acfDcA4c2E7Ddc",
-      "baseVariableBorrowRate": "10000000000000000000000000",
-      "maxVariableBorrowRate": "3080000000000000000000000000",
-      "optimalUsageRatio": "300000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0x06eFdBFf2a14a7c8E15944D1F4A48F9F95F663A4": {
-      "address": "0xC37353E5766164D8654D3CB395acfDcA4c2E7Ddc",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "455000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    },
-    "0x5300000000000000000000000000000000000004": {
-      "address": "0xC37353E5766164D8654D3CB395acfDcA4c2E7Ddc",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "827000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "27000000000000000000000000",
-      "variableRateSlope2": "800000000000000000000000000"
-    },
-    "0xd29687c813D741E2F938F4aC377128810E217b1b": {
-      "address": "0xC37353E5766164D8654D3CB395acfDcA4c2E7Ddc",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3070000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0xf610A9dfB7C89644979b4A0f27063E9e7d7Cda32": {
-      "address": "0xC37353E5766164D8654D3CB395acfDcA4c2E7Ddc",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "857500000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "7500000000000000000000000",
-      "variableRateSlope2": "850000000000000000000000000"
-    }
   }
 }
+```
