--- a/diffs/56_0x6807dc923806fE8Fd134338EABCA509979a7e0cB_before_56_0x6807dc923806fE8Fd134338EABCA509979a7e0cB_after.md
+++ b/diffs/56_0x6807dc923806fE8Fd134338EABCA509979a7e0cB_before_56_0x6807dc923806fE8Fd134338EABCA509979a7e0cB_after.md
@@ -1,27 +1,10 @@
+## Raw diff
+
+```json
 {
-  "chainId": 56,
-  "eModes": {
-    "1": {
-      "borrowableBitmap": "8",
-      "collateralBitmap": "128",
-      "eModeCategory": 1,
-      "label": "ETH-Correlated",
-      "liquidationBonus": 10100,
-      "liquidationThreshold": 9500,
-      "ltv": 9300
-    }
-  },
-  "poolConfig": {
-    "oracle": "0x39bc1bfDa2130d6Bb6DBEfd366939b4c7aa7C697",
-    "pool": "0x6807dc923806fE8Fd134338EABCA509979a7e0cB",
-    "poolAddressesProvider": "0xff75B6da14FfbbfD355Daf7a2731456b3562Ba6D",
-    "poolConfigurator": "0x67bdF23C7fCE7C65fF7415Ba3F2520B45D6f9584",
-    "priceOracleSentinel": "0x0000000000000000000000000000000000000000",
-    "protocolDataProvider": "0xc90Df74A7c16245c5F5C5870327Ceb38Fe5d5328"
-  },
   "raw": {
     "0x00901a076785e0906d1028c7d6372d247bec7d61": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.USDC.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -56,12 +39,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000007ef0cacfb15d369b0c4460d86dc2c68fe96988ad",
-          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134"
+          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134",
+          "label": "Implementation slot"
         }
       }
     },
     "0x0e76414d433ddfe8004d2a7505d218874875a996": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.WBNB.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -96,7 +80,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000005263972ce5312d9a25c54b80896b55aed6136e50",
-          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1"
+          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520424e4220536d61727420436861696e205661726961626c65204465",
@@ -109,7 +94,7 @@
       }
     },
     "0x2c391998308c56d7572a8f501d58cb56fb9fe1c5": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.wstETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -144,7 +129,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000005263972ce5312d9a25c54b80896b55aed6136e50",
-          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1"
+          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520424e4220536d61727420436861696e205661726961626c65204465",
@@ -157,7 +143,7 @@
       }
     },
     "0x2e94171493fabe316b6205f1585779c887771e2f": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.ETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -192,12 +178,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000007ef0cacfb15d369b0c4460d86dc2c68fe96988ad",
-          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134"
+          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134",
+          "label": "Implementation slot"
         }
       }
     },
     "0x4199cc1f5ed0d796563d7ccb2e036253e2c18281": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.Cake.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -232,12 +219,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000007ef0cacfb15d369b0c4460d86dc2c68fe96988ad",
-          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134"
+          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134",
+          "label": "Implementation slot"
         }
       }
     },
     "0x56a7ddc4e848ebf43845854205ad71d5d5f72d3d": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.BTCB.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -272,12 +260,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000007ef0cacfb15d369b0c4460d86dc2c68fe96988ad",
-          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134"
+          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134",
+          "label": "Implementation slot"
         }
       }
     },
     "0x6807dc923806fe8fd134338eabca509979a7e0cb": {
-      "label": null,
+      "label": "AaveV3BNB.POOL",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -292,12 +281,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000ddac2b348b191d39da0eb3866c8df5d48868ab11",
-          "newValue": "0x00000000000000000000000042b61ba9532e321c73db56bd0df78355e4becee2"
+          "newValue": "0x00000000000000000000000042b61ba9532e321c73db56bd0df78355e4becee2",
+          "label": "Implementation slot"
         }
       }
     },
     "0x75bd1a659bdc62e4c313950d44a2416fab43e785": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.FDUSD.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -332,12 +322,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000007ef0cacfb15d369b0c4460d86dc2c68fe96988ad",
-          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134"
+          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134",
+          "label": "Implementation slot"
         }
       }
     },
     "0x7b1e82f4f542fbb25d64c5523fe3e44abe4f2702": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.BTCB.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -372,7 +363,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000005263972ce5312d9a25c54b80896b55aed6136e50",
-          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1"
+          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520424e4220536d61727420436861696e205661726961626c65204465",
@@ -385,7 +377,7 @@
       }
     },
     "0x8fdea7891b4d6dbdc746309245b316af691a636c": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.ETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -420,7 +412,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000005263972ce5312d9a25c54b80896b55aed6136e50",
-          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1"
+          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520424e4220536d61727420436861696e205661726961626c65204465",
@@ -433,7 +426,7 @@
       }
     },
     "0x9b00a09492a626678e5a3009982191586c444df9": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.WBNB.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -468,12 +461,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000007ef0cacfb15d369b0c4460d86dc2c68fe96988ad",
-          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134"
+          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134",
+          "label": "Implementation slot"
         }
       }
     },
     "0xa9251ca9de909cb71783723713b21e4233fbf1b1": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.USDT.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -508,12 +502,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000007ef0cacfb15d369b0c4460d86dc2c68fe96988ad",
-          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134"
+          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134",
+          "label": "Implementation slot"
         }
       }
     },
     "0xbdfd4e51d3c14a232135f04988a42576efb31519": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.wstETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -548,12 +543,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000007ef0cacfb15d369b0c4460d86dc2c68fe96988ad",
-          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134"
+          "newValue": "0x0000000000000000000000007e199fc666368d95b9eaefa7d2d8081acab74134",
+          "label": "Implementation slot"
         }
       }
     },
     "0xcdbbed5606d9c5c98eeedd67933991dc17f0c68d": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.USDC.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -588,7 +584,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000005263972ce5312d9a25c54b80896b55aed6136e50",
-          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1"
+          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520424e4220536d61727420436861696e205661726961626c65204465",
@@ -601,7 +598,7 @@
       }
     },
     "0xe20dbc7119c635b1b51462f844861258770e0699": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.Cake.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -636,7 +633,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000005263972ce5312d9a25c54b80896b55aed6136e50",
-          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1"
+          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520424e4220536d61727420436861696e205661726961626c65204465",
@@ -649,7 +647,7 @@
       }
     },
     "0xe5ef2dd06755a97e975f7e282f828224f2c3e627": {
-      "label": null,
+      "label": "GovernanceV3BNB.PAYLOADS_CONTROLLER",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -665,7 +663,7 @@
       }
     },
     "0xe628b8a123e6037f1542e662b9f55141a16945c8": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.FDUSD.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -700,7 +698,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000005263972ce5312d9a25c54b80896b55aed6136e50",
-          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1"
+          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520424e4220536d61727420436861696e205661726961626c65204465",
@@ -713,7 +712,7 @@
       }
     },
     "0xf8bb2be50647447fb355e3a77b81be4db64107cd": {
-      "label": null,
+      "label": "AaveV3BNB.ASSETS.USDT.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -748,7 +747,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000005263972ce5312d9a25c54b80896b55aed6136e50",
-          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1"
+          "newValue": "0x000000000000000000000000afc667311ec776b75f069fb609e31f0cc4cfead1",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520424e4220536d61727420436861696e205661726961626c65204465",
@@ -760,353 +760,6 @@
         }
       }
     }
-  },
-  "reserves": {
-    "0x0E09FaBB73Bd3Ade0a17ECC321fD13a19e81cE82": {
-      "aToken": "0x4199CC1F5ed0d796563d7CcB2e036253E2C18281",
-      "aTokenName": "Aave BNB Smart Chain CAKE",
-      "aTokenSymbol": "aBnbCAKE",
-      "aTokenUnderlyingBalance": "667652784994544347836366",
-      "borrowCap": 600000,
-      "borrowingEnabled": true,
-      "debtCeiling": 350000000,
-      "decimals": 18,
-      "id": 0,
-      "interestRateStrategy": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 11000,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 6100,
-      "ltv": 5500,
-      "oracle": "0xB6064eD41d4f67e353768aA239cA86f4F73665a1",
-      "oracleDecimals": 8,
-      "oracleDescription": "CAKE / USD",
-      "oracleLatestAnswer": "278507407",
-      "reserveFactor": 2000,
-      "supplyCap": 1200000,
-      "symbol": "Cake",
-      "underlying": "0x0E09FaBB73Bd3Ade0a17ECC321fD13a19e81cE82",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xE20dBC7119c635B1B51462f844861258770e0699",
-      "variableDebtTokenName": "Aave BNB Smart Chain Variable Debt CAKE",
-      "variableDebtTokenSymbol": "variableDebtBnbCAKE",
-      "virtualBalance": "667652767178188621692459"
-    },
-    "0x2170Ed0880ac9A755fd29B2688956BD959F933F8": {
-      "aToken": "0x2E94171493fAbE316b6205f1585779C887771E2F",
-      "aTokenName": "Aave BNB Smart Chain ETH",
-      "aTokenSymbol": "aBnbETH",
-      "aTokenUnderlyingBalance": "2810152357469132782405",
-      "borrowCap": 8000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 3,
-      "interestRateStrategy": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 11000,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 8300,
-      "ltv": 8000,
-      "oracle": "0x9ef1B8c0E4F7dc8bF5719Ea496883DC6401d5b2e",
-      "oracleDecimals": 8,
-      "oracleDescription": "ETH / USD",
-      "oracleLatestAnswer": "378613000000",
-      "reserveFactor": 1500,
-      "supplyCap": 10000,
-      "symbol": "ETH",
-      "underlying": "0x2170Ed0880ac9A755fd29B2688956BD959F933F8",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x8FDea7891b4D6dbdc746309245B316aF691A636C",
-      "variableDebtTokenName": "Aave BNB Smart Chain Variable Debt ETH",
-      "variableDebtTokenSymbol": "variableDebtBnbETH",
-      "virtualBalance": "2810152351675900125884"
-    },
-    "0x26c5e01524d2E6280A48F2c50fF6De7e52E9611C": {
-      "aToken": "0xBDFd4E51D3c14a232135f04988a42576eFb31519",
-      "aTokenName": "Aave BNB Smart Chain wstETH",
-      "aTokenSymbol": "aBnbwstETH",
-      "aTokenUnderlyingBalance": "3775973955326089728656",
-      "borrowCap": 190,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 7,
-      "interestRateStrategy": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10750,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7500,
-      "ltv": 7200,
-      "oracle": "0xc1377B4cdF9116bf7b3d7F72A4f8A7Be8506cE80",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped wstETH / stETH(ETH) / USD",
-      "oracleLatestAnswer": "457671363087",
-      "reserveFactor": 1500,
-      "supplyCap": 3800,
-      "symbol": "wstETH",
-      "underlying": "0x26c5e01524d2E6280A48F2c50fF6De7e52E9611C",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x2c391998308c56D7572A8F501D58CB56fB9Fe1C5",
-      "variableDebtTokenName": "Aave BNB Smart Chain Variable Debt wstETH",
-      "variableDebtTokenSymbol": "variableDebtBnbwstETH",
-      "virtualBalance": "3775973955326089728656"
-    },
-    "0x55d398326f99059fF775485246999027B3197955": {
-      "aToken": "0xa9251ca9DE909CB71783723713B21E4233fbf1B1",
-      "aTokenName": "Aave BNB Smart Chain USDT",
-      "aTokenSymbol": "aBnbUSDT",
-      "aTokenUnderlyingBalance": "25689127246117624549135211",
-      "borrowCap": 90000000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 5,
-      "interestRateStrategy": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7800,
-      "ltv": 7500,
-      "oracle": "0xee845A7A40A090Da256420A293803C35B7F436b6",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDT/USD",
-      "oracleLatestAnswer": "100031700",
-      "reserveFactor": 1000,
-      "supplyCap": 200000000,
-      "symbol": "USDT",
-      "underlying": "0x55d398326f99059fF775485246999027B3197955",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xF8bb2Be50647447Fb355e3a77b81be4db64107cd",
-      "variableDebtTokenName": "Aave BNB Smart Chain Variable Debt USDT",
-      "variableDebtTokenSymbol": "variableDebtBnbUSDT",
-      "virtualBalance": "25688998263553808639701048"
-    },
-    "0x7130d2A12B9BCbFAe4f2634d864A1Ee1Ce3Ead9c": {
-      "aToken": "0x56a7ddc4e848EbF43845854205ad71D5D5F72d3D",
-      "aTokenName": "Aave BNB Smart Chain BTCB",
-      "aTokenSymbol": "aBnbBTCB",
-      "aTokenUnderlyingBalance": "930911299651706321366",
-      "borrowCap": 180,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 2,
-      "interestRateStrategy": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 11000,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7500,
-      "ltv": 7000,
-      "oracle": "0x264990fbd0A4796A3E3d8E37C4d5F87a3aCa5Ebf",
-      "oracleDecimals": 8,
-      "oracleDescription": "BTC / USD",
-      "oracleLatestAnswer": "11802340000000",
-      "reserveFactor": 2000,
-      "supplyCap": 1200,
-      "symbol": "BTCB",
-      "underlying": "0x7130d2A12B9BCbFAe4f2634d864A1Ee1Ce3Ead9c",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x7b1E82F4f542fbB25D64c5523Fe3e44aBe4F2702",
-      "variableDebtTokenName": "Aave BNB Smart Chain Variable Debt BTCB",
-      "variableDebtTokenSymbol": "variableDebtBnbBTCB",
-      "virtualBalance": "930911299647128122542"
-    },
-    "0x8AC76a51cc950d9822D68b83fE1Ad97B32Cd580d": {
-      "aToken": "0x00901a076785e0906d1028c7d6372d247bec7d61",
-      "aTokenName": "Aave BNB Smart Chain USDC",
-      "aTokenSymbol": "aBnbUSDC",
-      "aTokenUnderlyingBalance": "7585711233884483047685402",
-      "borrowCap": 40000000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 4,
-      "interestRateStrategy": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7800,
-      "ltv": 7500,
-      "oracle": "0x9102a9553B470dbD0dC74009a870A5886C92902C",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDC/USD",
-      "oracleLatestAnswer": "99985000",
-      "reserveFactor": 1000,
-      "supplyCap": 60000000,
-      "symbol": "USDC",
-      "underlying": "0x8AC76a51cc950d9822D68b83fE1Ad97B32Cd580d",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xcDBBEd5606d9c5C98eEedd67933991dC17F0c68d",
-      "variableDebtTokenName": "Aave BNB Smart Chain Variable Debt USDC",
-      "variableDebtTokenSymbol": "variableDebtBnbUSDC",
-      "virtualBalance": "7585710644833308902162721"
-    },
-    "0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c": {
-      "aToken": "0x9B00a09492a626678E5A3009982191586C444Df9",
-      "aTokenName": "Aave BNB Smart Chain WBNB",
-      "aTokenSymbol": "aBnbWBNB",
-      "aTokenUnderlyingBalance": "100440540338141720211308",
-      "borrowCap": 36000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 1,
-      "interestRateStrategy": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 11000,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7500,
-      "ltv": 7000,
-      "oracle": "0x0567F2323251f0Aab15c8dFb1967E4e8A7D42aeE",
-      "oracleDecimals": 8,
-      "oracleDescription": "BNB / USD",
-      "oracleLatestAnswer": "76789122330",
-      "reserveFactor": 2000,
-      "supplyCap": 144000,
-      "symbol": "WBNB",
-      "underlying": "0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x0E76414d433ddfe8004d2A7505d218874875a996",
-      "variableDebtTokenName": "Aave BNB Smart Chain Variable Debt WBNB",
-      "variableDebtTokenSymbol": "variableDebtBnbWBNB",
-      "virtualBalance": "100440539326772776088895"
-    },
-    "0xc5f0f7b66764F6ec8C8Dff7BA683102295E16409": {
-      "aToken": "0x75bd1A659bdC62e4C313950d44A2416faB43E785",
-      "aTokenName": "Aave BNB Smart Chain FDUSD",
-      "aTokenSymbol": "aBnbFDUSD",
-      "aTokenUnderlyingBalance": "444012433926574901540984",
-      "borrowCap": 10800000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 6,
-      "interestRateStrategy": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7500,
-      "ltv": 7000,
-      "oracle": "0x72Cb7a00D439296A6fC3c9face9Eca96bfdEf825",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped fdUSD/USD",
-      "oracleLatestAnswer": "99815498",
-      "reserveFactor": 2000,
-      "supplyCap": 12000000,
-      "symbol": "FDUSD",
-      "underlying": "0xc5f0f7b66764F6ec8C8Dff7BA683102295E16409",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xE628B8a123e6037f1542e662B9F55141a16945C8",
-      "variableDebtTokenName": "Aave BNB Smart Chain Variable Debt FDUSD",
-      "variableDebtTokenSymbol": "variableDebtBnbFDUSD",
-      "virtualBalance": "444009462370159953228768"
-    }
-  },
-  "strategies": {
-    "0x0E09FaBB73Bd3Ade0a17ECC321fD13a19e81cE82": {
-      "address": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3070000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0x2170Ed0880ac9A755fd29B2688956BD959F933F8": {
-      "address": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "827000000000000000000000000",
-      "optimalUsageRatio": "800000000000000000000000000",
-      "variableRateSlope1": "27000000000000000000000000",
-      "variableRateSlope2": "800000000000000000000000000"
-    },
-    "0x26c5e01524d2E6280A48F2c50fF6De7e52E9611C": {
-      "address": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3070000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0x55d398326f99059fF775485246999027B3197955": {
-      "address": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "455000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    },
-    "0x7130d2A12B9BCbFAe4f2634d864A1Ee1Ce3Ead9c": {
-      "address": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3070000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0x8AC76a51cc950d9822D68b83fE1Ad97B32Cd580d": {
-      "address": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "455000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    },
-    "0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c": {
-      "address": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3070000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0xc5f0f7b66764F6ec8C8Dff7BA683102295E16409": {
-      "address": "0x86AB1C62A8bf868E1b3E1ab87d587Aba6fbCbDC5",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "455000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    }
   }
 }
+```
