--- a/diffs/100_0xb50201558B00496A145fE76f7424749556E326D8_before_100_0xb50201558B00496A145fE76f7424749556E326D8_after.md
+++ b/diffs/100_0xb50201558B00496A145fE76f7424749556E326D8_before_100_0xb50201558B00496A145fE76f7424749556E326D8_after.md
@@ -1,45 +1,10 @@
+## Raw diff
+
+```json
 {
-  "chainId": 100,
-  "eModes": {
-    "1": {
-      "borrowableBitmap": "1",
-      "collateralBitmap": "3",
-      "eModeCategory": 1,
-      "label": "ETH correlated",
-      "liquidationBonus": 10100,
-      "liquidationThreshold": 9300,
-      "ltv": 9000
-    },
-    "2": {
-      "borrowableBitmap": "32",
-      "collateralBitmap": "64",
-      "eModeCategory": 2,
-      "label": "sDAI / EURe",
-      "liquidationBonus": 10500,
-      "liquidationThreshold": 8750,
-      "ltv": 8500
-    },
-    "3": {
-      "borrowableBitmap": "128",
-      "collateralBitmap": "64",
-      "eModeCategory": 3,
-      "label": "sDAI/USDCe",
-      "liquidationBonus": 10400,
-      "liquidationThreshold": 9200,
-      "ltv": 9000
-    }
-  },
-  "poolConfig": {
-    "oracle": "0xeb0a051be10228213BAEb449db63719d6742F7c4",
-    "pool": "0xb50201558B00496A145fE76f7424749556E326D8",
-    "poolAddressesProvider": "0x36616cf17557639614c1cdDb356b1B83fc0B2132",
-    "poolConfigurator": "0x7304979ec9E4EaA0273b6A037a31c4e9e5A75D16",
-    "priceOracleSentinel": "0x0000000000000000000000000000000000000000",
-    "protocolDataProvider": "0xF1F5acB596568895393cB5E4D0452D6592A2fA70"
-  },
   "raw": {
     "0x0c0fce05f2314540ecb095bf4d069e5e0ed90ff8": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.WETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -74,12 +39,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000adb599b1858e7738ae760d4dcf8c11cc569af3fb",
-          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939"
+          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939",
+          "label": "Implementation slot"
         }
       }
     },
     "0x23e4e76d01b2002be436ce8d6044b0aa2f68b68a": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.wstETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -114,12 +80,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000002d23eefc273aabfde4013cd80132e9fc16863069",
-          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850"
+          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850",
+          "label": "Implementation slot"
         }
       }
     },
     "0x281963d7471ecdc3a2bd4503e24e89691cfe420d": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.WXDAI.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -154,12 +121,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000adb599b1858e7738ae760d4dcf8c11cc569af3fb",
-          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939"
+          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939",
+          "label": "Implementation slot"
         }
       }
     },
     "0x37b9ad6b5dc8ad977ad716e92f49e9d200e58431": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.USDCe.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -194,12 +162,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000adb599b1858e7738ae760d4dcf8c11cc569af3fb",
-          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939"
+          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939",
+          "label": "Implementation slot"
         }
       }
     },
     "0x5f6f7b0a87ca3cf3d0b431ae03ef3305180bff4d": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.USDC.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -234,12 +203,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000adb599b1858e7738ae760d4dcf8c11cc569af3fb",
-          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939"
+          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939",
+          "label": "Implementation slot"
         }
       }
     },
     "0x7a5c3860a77a8dc1b225bd46d0fb2ac1c6d191bc": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.sDAI.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -274,12 +244,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000002d23eefc273aabfde4013cd80132e9fc16863069",
-          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850"
+          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850",
+          "label": "Implementation slot"
         }
       }
     },
     "0x8fe06e1d8aff42bf6812cacf7854a2249a00bed7": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.sDAI.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -314,12 +285,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000adb599b1858e7738ae760d4dcf8c11cc569af3fb",
-          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939"
+          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939",
+          "label": "Implementation slot"
         }
       }
     },
     "0x9a1f491b86d09fc1484b5fab10041b189b60756b": {
-      "label": null,
+      "label": "GovernanceV3Gnosis.PAYLOADS_CONTROLLER",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -335,7 +307,7 @@
       }
     },
     "0x9d881f67f20b49243c98f53d2b9e91e39d02ae09": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.wstETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -370,7 +342,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000adb599b1858e7738ae760d4dcf8c11cc569af3fb",
-          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939"
+          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520476e6f736973205661726961626c65204465627420777374455448",
@@ -379,7 +352,7 @@
       }
     },
     "0xa1fa064a85266e2ca82dee5c5ccec84df445760e": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.GNO.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -414,12 +387,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000002d23eefc273aabfde4013cd80132e9fc16863069",
-          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850"
+          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850",
+          "label": "Implementation slot"
         }
       }
     },
     "0xa818f1b57c201e092c4a2017a91815034326efd1": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.WETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -454,12 +428,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000002d23eefc273aabfde4013cd80132e9fc16863069",
-          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850"
+          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850",
+          "label": "Implementation slot"
         }
       }
     },
     "0xb50201558b00496a145fe76f7424749556e326d8": {
-      "label": null,
+      "label": "AaveV3Gnosis.POOL",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -474,12 +449,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000abfa71ae20709d6b62091c2a2dd937b6bf851b94",
-          "newValue": "0x0000000000000000000000003b39c5905424391cd558083db640808a9cfb55cb"
+          "newValue": "0x0000000000000000000000003b39c5905424391cd558083db640808a9cfb55cb",
+          "label": "Implementation slot"
         }
       }
     },
     "0xb96404e475f337a7e98e4a541c9b71309bb66c5a": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.EURe.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -514,12 +490,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000adb599b1858e7738ae760d4dcf8c11cc569af3fb",
-          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939"
+          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939",
+          "label": "Implementation slot"
         }
       }
     },
     "0xbc59e99198dba71985a66e1713cc89ffec53f7fc": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.GNO.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -554,12 +531,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000adb599b1858e7738ae760d4dcf8c11cc569af3fb",
-          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939"
+          "newValue": "0x0000000000000000000000000776fc74a158b8cb98be243f9c5ec373be6f7939",
+          "label": "Implementation slot"
         }
       }
     },
     "0xc0333cb85b59a788d8c7cae5e1fd6e229a3e5a65": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.USDCe.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -594,12 +572,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000002d23eefc273aabfde4013cd80132e9fc16863069",
-          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850"
+          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850",
+          "label": "Implementation slot"
         }
       }
     },
     "0xc6b7aca6de8a6044e0e32d0c841a89244a10d284": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.USDC.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -634,12 +613,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000002d23eefc273aabfde4013cd80132e9fc16863069",
-          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850"
+          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850",
+          "label": "Implementation slot"
         }
       }
     },
     "0xd0dd6cef72143e22cced4867eb0d5f2328715533": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.WXDAI.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -674,12 +654,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000002d23eefc273aabfde4013cd80132e9fc16863069",
-          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850"
+          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850",
+          "label": "Implementation slot"
         }
       }
     },
     "0xedbc7449a9b594ca4e053d9737ec5dc4cbccbfb2": {
-      "label": null,
+      "label": "AaveV3Gnosis.ASSETS.EURe.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -714,357 +695,11 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000002d23eefc273aabfde4013cd80132e9fc16863069",
-          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850"
+          "newValue": "0x000000000000000000000000ce579ae642e40f8356a9f538c6db4e2ea91c5850",
+          "label": "Implementation slot"
         }
       }
     }
-  },
-  "reserves": {
-    "0x2a22f9c3b484c3629090FeED35F17Ff8F88f76F0": {
-      "aToken": "0xC0333cb85B59a788d8C7CAe5e1Fd6E229A3E5a65",
-      "aTokenName": "Aave Gnosis USDCe",
-      "aTokenSymbol": "aGnoUSDCe",
-      "aTokenUnderlyingBalance": "1578115381019",
-      "borrowCap": 9000000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 7,
-      "interestRateStrategy": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7800,
-      "ltv": 7500,
-      "oracle": "0x1450C4BE9dd66889CddAB77e5947B6166ACbfAE2",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDC/USD",
-      "oracleLatestAnswer": "99985744",
-      "reserveFactor": 1000,
-      "supplyCap": 12000000,
-      "symbol": "USDC.e",
-      "underlying": "0x2a22f9c3b484c3629090FeED35F17Ff8F88f76F0",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x37B9Ad6b5DC8Ad977AD716e92F49e9D200e58431",
-      "variableDebtTokenName": "Aave Gnosis Variable Debt USDCe",
-      "variableDebtTokenSymbol": "variableDebtGnoUSDCe",
-      "virtualBalance": "1578115381019"
-    },
-    "0x6A023CCd1ff6F2045C3309768eAd9E68F978f6e1": {
-      "aToken": "0xa818F1B57c201E092C4A2017A91815034326Efd1",
-      "aTokenName": "Aave Gnosis WETH",
-      "aTokenSymbol": "aGnoWETH",
-      "aTokenUnderlyingBalance": "527505274147435578863",
-      "borrowCap": 3500,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 0,
-      "interestRateStrategy": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10600,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 8300,
-      "ltv": 8000,
-      "oracle": "0xa767f745331D267c7751297D982b050c93985627",
-      "oracleDecimals": 8,
-      "oracleDescription": "ETH / USD",
-      "oracleLatestAnswer": "378772000000",
-      "reserveFactor": 1500,
-      "supplyCap": 4800,
-      "symbol": "WETH",
-      "underlying": "0x6A023CCd1ff6F2045C3309768eAd9E68F978f6e1",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x0c0fce05F2314540EcB095bF4D069e5E0ED90fF8",
-      "variableDebtTokenName": "Aave Gnosis Variable Debt WETH",
-      "variableDebtTokenSymbol": "variableDebtGnoWETH",
-      "virtualBalance": "527505217883685529219"
-    },
-    "0x6C76971f98945AE98dD7d4DFcA8711ebea946eA6": {
-      "aToken": "0x23e4E76D01B2002BE436CE8d6044b0aA2f68B68a",
-      "aTokenName": "Aave Gnosis wstETH",
-      "aTokenSymbol": "aGnowstETH",
-      "aTokenUnderlyingBalance": "9697844067384531986159",
-      "borrowCap": 400,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 1,
-      "interestRateStrategy": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10600,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7900,
-      "ltv": 7500,
-      "oracle": "0x8Ee42Ba520cA106294163fb8b1ffE9C6Fba35507",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped wstETH / stETH(ETH) / USD",
-      "oracleLatestAnswer": "457828339495",
-      "reserveFactor": 500,
-      "supplyCap": 10800,
-      "symbol": "wstETH",
-      "underlying": "0x6C76971f98945AE98dD7d4DFcA8711ebea946eA6",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x9D881f67F20B49243c98f53d2B9E91E39d02Ae09",
-      "variableDebtTokenName": "Aave Gnosis Variable Debt wstETH",
-      "variableDebtTokenSymbol": "variableDebtGnowstETH",
-      "virtualBalance": "9697844067116243569695"
-    },
-    "0x9C58BAcC331c9aa871AFD802DB6379a98e80CEdb": {
-      "aToken": "0xA1Fa064A85266E2Ca82DEe5C5CcEC84DF445760e",
-      "aTokenName": "Aave Gnosis GNO",
-      "aTokenSymbol": "aGnoGNO",
-      "aTokenUnderlyingBalance": "73594451201257913772384",
-      "borrowCap": 20000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 2,
-      "interestRateStrategy": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 11000,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 5300,
-      "ltv": 4800,
-      "oracle": "0x22441d81416430A54336aB28765abd31a792Ad37",
-      "oracleDecimals": 8,
-      "oracleDescription": "GNO / USD",
-      "oracleLatestAnswer": "15438318274",
-      "reserveFactor": 2000,
-      "supplyCap": 180000,
-      "symbol": "GNO",
-      "underlying": "0x9C58BAcC331c9aa871AFD802DB6379a98e80CEdb",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xBc59E99198DbA71985A66E1713cC89FFEC53f7FC",
-      "variableDebtTokenName": "Aave Gnosis Variable Debt GNO",
-      "variableDebtTokenSymbol": "variableDebtGnoGNO",
-      "virtualBalance": "73594451182075243015016"
-    },
-    "0xDDAfbb505ad214D7b80b1f830fcCc89B60fb7A83": {
-      "aToken": "0xc6B7AcA6DE8a6044E0e32d0c841a89244A10D284",
-      "aTokenName": "Aave Gnosis USDC",
-      "aTokenSymbol": "aGnoUSDC",
-      "aTokenUnderlyingBalance": "335240695028",
-      "borrowCap": 2000000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 3,
-      "interestRateStrategy": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 2000,
-      "liquidationThreshold": 7800,
-      "ltv": 6500,
-      "oracle": "0x1450C4BE9dd66889CddAB77e5947B6166ACbfAE2",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDC/USD",
-      "oracleLatestAnswer": "99985744",
-      "reserveFactor": 4000,
-      "supplyCap": 2500000,
-      "symbol": "USDC",
-      "underlying": "0xDDAfbb505ad214D7b80b1f830fcCc89B60fb7A83",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x5F6f7B0a87CA3CF3d0b431Ae03EF3305180BFf4d",
-      "variableDebtTokenName": "Aave Gnosis Variable Debt USDC",
-      "variableDebtTokenSymbol": "variableDebtGnoUSDC",
-      "virtualBalance": "335237672024"
-    },
-    "0xaf204776c7245bF4147c2612BF6e5972Ee483701": {
-      "aToken": "0x7a5c3860a77a8DC1b225BD46d0fb2ac1C6D191BC",
-      "aTokenName": "Aave Gnosis sDAI",
-      "aTokenSymbol": "aGnosDAI",
-      "aTokenUnderlyingBalance": "18600740423090859828753465",
-      "borrowCap": 0,
-      "borrowingEnabled": false,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 6,
-      "interestRateStrategy": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 2000,
-      "liquidationThreshold": 7800,
-      "ltv": 7500,
-      "oracle": "0x620424f393dD413c2F8Dc2980905c4daa3619e61",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped sDAI / DAI / USD",
-      "oracleLatestAnswer": "118948169",
-      "reserveFactor": 1000,
-      "supplyCap": 48000000,
-      "symbol": "sDAI",
-      "underlying": "0xaf204776c7245bF4147c2612BF6e5972Ee483701",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x8Fe06E1D8Aff42Bf6812CacF7854A2249a00bED7",
-      "variableDebtTokenName": "Aave Gnosis Variable Debt sDAI",
-      "variableDebtTokenSymbol": "variableDebtGnosDAI",
-      "virtualBalance": "18600740423090859828753465"
-    },
-    "0xcB444e90D8198415266c6a2724b7900fb12FC56E": {
-      "aToken": "0xEdBC7449a9b594CA4E053D9737EC5Dc4CbCcBfb2",
-      "aTokenName": "Aave Gnosis EURe",
-      "aTokenSymbol": "aGnoEURe",
-      "aTokenUnderlyingBalance": "3137865496180923765668427",
-      "borrowCap": 15000000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 5,
-      "interestRateStrategy": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 0,
-      "liquidationProtocolFee": 0,
-      "liquidationThreshold": 0,
-      "ltv": 0,
-      "oracle": "0xab70BCB260073d036d1660201e9d5405F5829b7a",
-      "oracleDecimals": 8,
-      "oracleDescription": "EUR / USD",
-      "oracleLatestAnswer": "116646000",
-      "reserveFactor": 1000,
-      "supplyCap": 18000000,
-      "symbol": "EURe",
-      "underlying": "0xcB444e90D8198415266c6a2724b7900fb12FC56E",
-      "usageAsCollateralEnabled": false,
-      "variableDebtToken": "0xb96404e475f337A7E98e4a541C9b71309BB66c5A",
-      "variableDebtTokenName": "Aave Gnosis Variable Debt EURe",
-      "variableDebtTokenSymbol": "variableDebtGnoEURe",
-      "virtualBalance": "3137865172085796759546264"
-    },
-    "0xe91D153E0b41518A2Ce8Dd3D7944Fa863463a97d": {
-      "aToken": "0xd0Dd6cEF72143E22cCED4867eb0d5F2328715533",
-      "aTokenName": "Aave Gnosis WXDAI",
-      "aTokenSymbol": "aGnoWXDAI",
-      "aTokenUnderlyingBalance": "624066296939952364943349",
-      "borrowCap": 36000000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 4,
-      "interestRateStrategy": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 2000,
-      "liquidationThreshold": 7700,
-      "ltv": 6300,
-      "oracle": "0x7443afE82986d7475Cea0c5b04C6F1581fdAce87",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped wXDAI/USD",
-      "oracleLatestAnswer": "99994000",
-      "reserveFactor": 2500,
-      "supplyCap": 36000000,
-      "symbol": "WXDAI",
-      "underlying": "0xe91D153E0b41518A2Ce8Dd3D7944Fa863463a97d",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x281963D7471eCdC3A2Bd4503e24e89691cfe420D",
-      "variableDebtTokenName": "Aave Gnosis Variable Debt WXDAI",
-      "variableDebtTokenSymbol": "variableDebtGnoWXDAI",
-      "virtualBalance": "624065586673945527858827"
-    }
-  },
-  "strategies": {
-    "0x2a22f9c3b484c3629090FeED35F17Ff8F88f76F0": {
-      "address": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "455000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    },
-    "0x6A023CCd1ff6F2045C3309768eAd9E68F978f6e1": {
-      "address": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "827000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "27000000000000000000000000",
-      "variableRateSlope2": "800000000000000000000000000"
-    },
-    "0x6C76971f98945AE98dD7d4DFcA8711ebea946eA6": {
-      "address": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3070000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0x9C58BAcC331c9aa871AFD802DB6379a98e80CEdb": {
-      "address": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "950000000000000000000000000",
-      "optimalUsageRatio": "800000000000000000000000000",
-      "variableRateSlope1": "150000000000000000000000000",
-      "variableRateSlope2": "800000000000000000000000000"
-    },
-    "0xDDAfbb505ad214D7b80b1f830fcCc89B60fb7A83": {
-      "address": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "500000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "100000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    },
-    "0xaf204776c7245bF4147c2612BF6e5972Ee483701": {
-      "address": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "790000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "40000000000000000000000000",
-      "variableRateSlope2": "750000000000000000000000000"
-    },
-    "0xcB444e90D8198415266c6a2724b7900fb12FC56E": {
-      "address": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "555000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "500000000000000000000000000"
-    },
-    "0xe91D153E0b41518A2Ce8Dd3D7944Fa863463a97d": {
-      "address": "0x4cE496f0a390745102540faF041EF92FfD588b44",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "455000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    }
   }
 }
+```
