--- a/diffs/1_0x0AA97c284e98396202b6A04024F5E2c65026F3c0_before_1_0x0AA97c284e98396202b6A04024F5E2c65026F3c0_after.md
+++ b/diffs/1_0x0AA97c284e98396202b6A04024F5E2c65026F3c0_before_1_0x0AA97c284e98396202b6A04024F5E2c65026F3c0_after.md
@@ -1,17 +1,10 @@
+## Raw diff
+
+```json
 {
-  "chainId": 1,
-  "eModes": {},
-  "poolConfig": {
-    "oracle": "0x43b64f28A678944E0655404B0B98E443851cC34F",
-    "pool": "0x0AA97c284e98396202b6A04024F5E2c65026F3c0",
-    "poolAddressesProvider": "0xeBa440B438Ad808101d1c451C1C5322c90BEFCdA",
-    "poolConfigurator": "0x8438F4D29D895d75C86BDC25360c25eF0607E65d",
-    "priceOracleSentinel": "0x0000000000000000000000000000000000000000",
-    "protocolDataProvider": "0x7c8509591f9693D21280d96e149a08A3bf69Cd0c"
-  },
   "raw": {
     "0x0aa97c284e98396202b6a04024f5e2c65026f3c0": {
-      "label": null,
+      "label": "AaveV3EthereumEtherFi.POOL",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -26,12 +19,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000000ad7e5c14f28773eddc9ab1e76ea6a522ef5c019",
-          "newValue": "0x00000000000000000000000007ddfc1bd953f16e3bf2d590ca575b19f27c926d"
+          "newValue": "0x00000000000000000000000007ddfc1bd953f16e3bf2d590ca575b19f27c926d",
+          "label": "Implementation slot"
         }
       }
     },
     "0x16264412cb72f0d16a446f7d928dd0d822810048": {
-      "label": null,
+      "label": "AaveV3EthereumEtherFi.ASSETS.weETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -66,7 +60,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000b7cdaec5fc1855040df499b8ebe49ca9ac1bdd4b",
-          "newValue": "0x0000000000000000000000004ba2c646093d2c88cfc44dd6511de629dd49ee41"
+          "newValue": "0x0000000000000000000000004ba2c646093d2c88cfc44dd6511de629dd49ee41",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520457468657265756d2045746865724669205661726961626c652044",
@@ -79,7 +74,7 @@
       }
     },
     "0x6914eccf50837dc61b43ee478a9bd9b439648956": {
-      "label": null,
+      "label": "AaveV3EthereumEtherFi.ASSETS.FRAX.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -114,12 +109,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000080b0486a9d985f3ad918c9b1b1e19d724a1c99b7",
-          "newValue": "0x000000000000000000000000dc7b6b0acf2fb6927526e2c501de41eaeae8702a"
+          "newValue": "0x000000000000000000000000dc7b6b0acf2fb6927526e2c501de41eaeae8702a",
+          "label": "Implementation slot"
         }
       }
     },
     "0x7380c583cde4409eff5dd3320d93a45d96b80e2e": {
-      "label": null,
+      "label": "AaveV3EthereumEtherFi.ASSETS.USDC.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -154,12 +150,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000080b0486a9d985f3ad918c9b1b1e19d724a1c99b7",
-          "newValue": "0x000000000000000000000000dc7b6b0acf2fb6927526e2c501de41eaeae8702a"
+          "newValue": "0x000000000000000000000000dc7b6b0acf2fb6927526e2c501de41eaeae8702a",
+          "label": "Implementation slot"
         }
       }
     },
     "0x9355032d747f1e08f8720cd01950e652ee15cdb7": {
-      "label": null,
+      "label": "AaveV3EthereumEtherFi.ASSETS.USDC.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -194,7 +191,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000b7cdaec5fc1855040df499b8ebe49ca9ac1bdd4b",
-          "newValue": "0x0000000000000000000000004ba2c646093d2c88cfc44dd6511de629dd49ee41"
+          "newValue": "0x0000000000000000000000004ba2c646093d2c88cfc44dd6511de629dd49ee41",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520457468657265756d2045746865724669205661726961626c652044",
@@ -207,7 +205,7 @@
       }
     },
     "0xbe1f842e7e0afd2c2322aae5d34ba899544b29db": {
-      "label": null,
+      "label": "AaveV3EthereumEtherFi.ASSETS.weETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -242,12 +240,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000080b0486a9d985f3ad918c9b1b1e19d724a1c99b7",
-          "newValue": "0x000000000000000000000000dc7b6b0acf2fb6927526e2c501de41eaeae8702a"
+          "newValue": "0x000000000000000000000000dc7b6b0acf2fb6927526e2c501de41eaeae8702a",
+          "label": "Implementation slot"
         }
       }
     },
     "0xd2cf07dee40d3d530d15b88d689f5cd97a31fc3d": {
-      "label": null,
+      "label": "AaveV3EthereumEtherFi.ASSETS.PYUSD.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -282,7 +281,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000b7cdaec5fc1855040df499b8ebe49ca9ac1bdd4b",
-          "newValue": "0x0000000000000000000000004ba2c646093d2c88cfc44dd6511de629dd49ee41"
+          "newValue": "0x0000000000000000000000004ba2c646093d2c88cfc44dd6511de629dd49ee41",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520457468657265756d2045746865724669205661726961626c652044",
@@ -295,7 +295,7 @@
       }
     },
     "0xdabad81af85554e9ae636395611c58f7ec1aaec5": {
-      "label": null,
+      "label": "GovernanceV3Ethereum.PAYLOADS_CONTROLLER",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -311,7 +311,7 @@
       }
     },
     "0xdf7f48892244c6106ea784609f7de10ab36f9c7e": {
-      "label": null,
+      "label": "AaveV3EthereumEtherFi.ASSETS.PYUSD.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -346,12 +346,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000080b0486a9d985f3ad918c9b1b1e19d724a1c99b7",
-          "newValue": "0x000000000000000000000000dc7b6b0acf2fb6927526e2c501de41eaeae8702a"
+          "newValue": "0x000000000000000000000000dc7b6b0acf2fb6927526e2c501de41eaeae8702a",
+          "label": "Implementation slot"
         }
       }
     },
     "0xfd3ada5aabdc6531c7c2ac46c00ebf870f5a0e6b": {
-      "label": null,
+      "label": "AaveV3EthereumEtherFi.ASSETS.FRAX.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -386,7 +387,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000b7cdaec5fc1855040df499b8ebe49ca9ac1bdd4b",
-          "newValue": "0x0000000000000000000000004ba2c646093d2c88cfc44dd6511de629dd49ee41"
+          "newValue": "0x0000000000000000000000004ba2c646093d2c88cfc44dd6511de629dd49ee41",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520457468657265756d2045746865724669205661726961626c652044",
@@ -398,181 +400,6 @@
         }
       }
     }
-  },
-  "reserves": {
-    "0x6c3ea9036406852006290770BEdFcAbA0e23A0e8": {
-      "aToken": "0xdF7f48892244C6106EA784609f7de10AB36F9c7e",
-      "aTokenName": "Aave Ethereum EtherFi PYUSD",
-      "aTokenSymbol": "aEthEtherFiPYUSD",
-      "aTokenUnderlyingBalance": "111600744",
-      "borrowCap": 1,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 2,
-      "interestRateStrategy": "0xC16666b7FF197427BD255E6961A5F99cfb3A6059",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 0,
-      "liquidationProtocolFee": 0,
-      "liquidationThreshold": 0,
-      "ltv": 0,
-      "oracle": "0x36964C0579D02E0a5AaAb89E24Cf8d7CDF3549EE",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped pyUSD/USD",
-      "oracleLatestAnswer": "99937000",
-      "reserveFactor": 2000,
-      "supplyCap": 1,
-      "symbol": "PYUSD",
-      "underlying": "0x6c3ea9036406852006290770BEdFcAbA0e23A0e8",
-      "usageAsCollateralEnabled": false,
-      "variableDebtToken": "0xD2cf07dEE40d3D530D15b88d689f5cd97A31FC3D",
-      "variableDebtTokenName": "Aave Ethereum EtherFi Variable Debt PYUSD",
-      "variableDebtTokenSymbol": "variableDebtEthEtherFiPYUSD",
-      "virtualBalance": "111600744"
-    },
-    "0x853d955aCEf822Db058eb8505911ED77F175b99e": {
-      "aToken": "0x6914ECCf50837dC61b43ee478a9BD9B439648956",
-      "aTokenName": "Aave Ethereum EtherFi FRAX",
-      "aTokenSymbol": "aEthEtherFiFRAX",
-      "aTokenUnderlyingBalance": "527792014577415327422090",
-      "borrowCap": 1,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 3,
-      "interestRateStrategy": "0xC16666b7FF197427BD255E6961A5F99cfb3A6059",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 0,
-      "liquidationProtocolFee": 0,
-      "liquidationThreshold": 0,
-      "ltv": 0,
-      "oracle": "0xeF50f8DC65402c3019586bc8725fCD0b99B8AAd7",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped FRAX/USD",
-      "oracleLatestAnswer": "99952992",
-      "reserveFactor": 2000,
-      "supplyCap": 1,
-      "symbol": "FRAX",
-      "underlying": "0x853d955aCEf822Db058eb8505911ED77F175b99e",
-      "usageAsCollateralEnabled": false,
-      "variableDebtToken": "0xfd3aDA5AAbdc6531C7C2AC46c00eBf870f5a0E6B",
-      "variableDebtTokenName": "Aave Ethereum EtherFi Variable Debt FRAX",
-      "variableDebtTokenSymbol": "variableDebtEthEtherFiFRAX",
-      "virtualBalance": "527792014577415327422090"
-    },
-    "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48": {
-      "aToken": "0x7380c583cDe4409eFF5DD3320D93a45D96B80E2e",
-      "aTokenName": "Aave Ethereum EtherFi USDC",
-      "aTokenSymbol": "aEthEtherFiUSDC",
-      "aTokenUnderlyingBalance": "58606673705",
-      "borrowCap": 1,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 1,
-      "interestRateStrategy": "0xC16666b7FF197427BD255E6961A5F99cfb3A6059",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 0,
-      "liquidationProtocolFee": 0,
-      "liquidationThreshold": 0,
-      "ltv": 0,
-      "oracle": "0xB6557F02F0a5dA7b9D3C2d979cc19e00e756F6dA",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDC/USD",
-      "oracleLatestAnswer": "99988000",
-      "reserveFactor": 1000,
-      "supplyCap": 1,
-      "symbol": "USDC",
-      "underlying": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
-      "usageAsCollateralEnabled": false,
-      "variableDebtToken": "0x9355032d747f1e08F8720CD01950E652eE15cdB7",
-      "variableDebtTokenName": "Aave Ethereum EtherFi Variable Debt USDC",
-      "variableDebtTokenSymbol": "variableDebtEthEtherFiUSDC",
-      "virtualBalance": "58606666805"
-    },
-    "0xCd5fE23C85820F7B72D0926FC9b05b43E359b7ee": {
-      "aToken": "0xbe1F842e7e0afd2c2322aae5d34bA899544b29db",
-      "aTokenName": "Aave Ethereum EtherFi weETH",
-      "aTokenSymbol": "aEthEtherFiweETH",
-      "aTokenUnderlyingBalance": "40131364080279552529",
-      "borrowCap": 0,
-      "borrowingEnabled": false,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 0,
-      "interestRateStrategy": "0xC16666b7FF197427BD255E6961A5F99cfb3A6059",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10600,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 8100,
-      "ltv": 7800,
-      "oracle": "0xf112aF6F0A332B815fbEf3Ff932c057E570b62d3",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped weETH / eETH(ETH) / USD",
-      "oracleLatestAnswer": "397587430327",
-      "reserveFactor": 4500,
-      "supplyCap": 1,
-      "symbol": "weETH",
-      "underlying": "0xCd5fE23C85820F7B72D0926FC9b05b43E359b7ee",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x16264412CB72F0d16A446f7D928Dd0D822810048",
-      "variableDebtTokenName": "Aave Ethereum EtherFi Variable Debt weETH",
-      "variableDebtTokenSymbol": "variableDebtEthEtherFiweETH",
-      "virtualBalance": "40131364080279552529"
-    }
-  },
-  "strategies": {
-    "0x6c3ea9036406852006290770BEdFcAbA0e23A0e8": {
-      "address": "0xC16666b7FF197427BD255E6961A5F99cfb3A6059",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "525000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "125000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    },
-    "0x853d955aCEf822Db058eb8505911ED77F175b99e": {
-      "address": "0xC16666b7FF197427BD255E6961A5F99cfb3A6059",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "455000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    },
-    "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48": {
-      "address": "0xC16666b7FF197427BD255E6961A5F99cfb3A6059",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "455000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "400000000000000000000000000"
-    },
-    "0xCd5fE23C85820F7B72D0926FC9b05b43E359b7ee": {
-      "address": "0xC16666b7FF197427BD255E6961A5F99cfb3A6059",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3070000000000000000000000000",
-      "optimalUsageRatio": "350000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    }
   }
 }
+```
