--- a/diffs/1_0x4e033931ad43597d96D6bcc25c280717730B58B1_before_1_0x4e033931ad43597d96D6bcc25c280717730B58B1_after.md
+++ b/diffs/1_0x4e033931ad43597d96D6bcc25c280717730B58B1_before_1_0x4e033931ad43597d96D6bcc25c280717730B58B1_after.md
@@ -1,81 +1,10 @@
+## Raw diff
+
+```json
 {
-  "chainId": 1,
-  "eModes": {
-    "1": {
-      "borrowableBitmap": "2",
-      "collateralBitmap": "1",
-      "eModeCategory": 1,
-      "label": "wstETH/WETH",
-      "liquidationBonus": 10100,
-      "liquidationThreshold": 9650,
-      "ltv": 9500
-    },
-    "2": {
-      "borrowableBitmap": "76",
-      "collateralBitmap": "16",
-      "eModeCategory": 2,
-      "label": "LRT Stablecoins main",
-      "liquidationBonus": 10750,
-      "liquidationThreshold": 7800,
-      "ltv": 7500
-    },
-    "3": {
-      "borrowableBitmap": "1",
-      "collateralBitmap": "16",
-      "eModeCategory": 3,
-      "label": "LRT wstETH main",
-      "liquidationBonus": 10100,
-      "liquidationThreshold": 9500,
-      "ltv": 9300
-    },
-    "4": {
-      "borrowableBitmap": "72",
-      "collateralBitmap": "32",
-      "eModeCategory": 4,
-      "label": "sUSDe Stablecoins",
-      "liquidationBonus": 10400,
-      "liquidationThreshold": 9200,
-      "ltv": 9000
-    },
-    "5": {
-      "borrowableBitmap": "1",
-      "collateralBitmap": "128",
-      "eModeCategory": 5,
-      "label": "rsETH LST main",
-      "liquidationBonus": 10100,
-      "liquidationThreshold": 9500,
-      "ltv": 9300
-    },
-    "6": {
-      "borrowableBitmap": "76",
-      "collateralBitmap": "128",
-      "eModeCategory": 6,
-      "label": "rsETH/Stablecoins",
-      "liquidationBonus": 10750,
-      "liquidationThreshold": 7500,
-      "ltv": 7200
-    },
-    "7": {
-      "borrowableBitmap": "1",
-      "collateralBitmap": "256",
-      "eModeCategory": 7,
-      "label": "tETH/wstETH",
-      "liquidationBonus": 10200,
-      "liquidationThreshold": 9400,
-      "ltv": 9200
-    }
-  },
-  "poolConfig": {
-    "oracle": "0xE3C061981870C0C7b1f3C4F4bB36B95f1F260BE6",
-    "pool": "0x4e033931ad43597d96D6bcc25c280717730B58B1",
-    "poolAddressesProvider": "0xcfBf336fe147D643B9Cb705648500e101504B16d",
-    "poolConfigurator": "0x342631c6CeFC9cfbf97b2fe4aa242a236e1fd517",
-    "priceOracleSentinel": "0x0000000000000000000000000000000000000000",
-    "protocolDataProvider": "0xB85B2bFEbeC4F5f401dbf92ac147A3076391fCD5"
-  },
   "raw": {
     "0x08e1bba76d27841dd91fab4b3a636a0d5cf8c3e9": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.ezETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -110,7 +39,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000034fd9638ee82e78f21d66b54bf4d4e61cdb4f7d1",
-          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb"
+          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520457468657265756d204c69646f205661726961626c652044656274",
@@ -123,7 +53,7 @@
       }
     },
     "0x09aa30b182488f769a9824f15e6ce58591da4781": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.USDS.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -158,12 +88,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009a8c37a8832bef41d30a2b7af9e09b6666ee553a",
-          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d"
+          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d",
+          "label": "Implementation slot"
         }
       }
     },
     "0x18577f0f4a0b2ee6f4048db51c7acd8699f97db8": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.GHO.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -198,7 +129,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000034fd9638ee82e78f21d66b54bf4d4e61cdb4f7d1",
-          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb"
+          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520457468657265756d204c69646f205661726961626c652044656274",
@@ -211,7 +143,7 @@
       }
     },
     "0x18efe565a5373f430e2f809b97de30335b3ad96a": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.GHO.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -246,12 +178,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009a8c37a8832bef41d30a2b7af9e09b6666ee553a",
-          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d"
+          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d",
+          "label": "Implementation slot"
         }
       }
     },
     "0x2a1fbcb52ed4d9b23dad17e1e8aed4bb0e6079b8": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.USDC.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -286,12 +219,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009a8c37a8832bef41d30a2b7af9e09b6666ee553a",
-          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d"
+          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d",
+          "label": "Implementation slot"
         }
       }
     },
     "0x2abbaab3ef4e4a899d39e7ec996b5715e76b399a": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.sUSDe.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -326,7 +260,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000034fd9638ee82e78f21d66b54bf4d4e61cdb4f7d1",
-          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb"
+          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520457468657265756d204c69646f205661726961626c652044656274",
@@ -339,7 +274,7 @@
       }
     },
     "0x2c2163f120cf58631368981bc16e90190bc6c644": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.rsETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -374,7 +309,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000034fd9638ee82e78f21d66b54bf4d4e61cdb4f7d1",
-          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb"
+          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520457468657265756d204c69646f205661726961626c652044656274",
@@ -387,7 +323,7 @@
       }
     },
     "0x2d9fe18b6c35fe439cc15d932cc5c943bf2d901e": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.USDS.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -422,7 +358,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000034fd9638ee82e78f21d66b54bf4d4e61cdb4f7d1",
-          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb"
+          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520457468657265756d204c69646f205661726961626c652044656274",
@@ -435,7 +372,7 @@
       }
     },
     "0x4e033931ad43597d96d6bcc25c280717730b58b1": {
-      "label": null,
+      "label": "AaveV3EthereumLido.POOL",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -450,12 +387,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000eabd3344f14b4df97611910dd3826b0767bcc588",
-          "newValue": "0x000000000000000000000000ebcee808d9f15a7cb740d380d08f2755afc3f4c9"
+          "newValue": "0x000000000000000000000000ebcee808d9f15a7cb740d380d08f2755afc3f4c9",
+          "label": "Implementation slot"
         }
       }
     },
     "0x56d919e7b25aa42f3f8a4bc77b8982048f2e84b4": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.rsETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -490,12 +428,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009a8c37a8832bef41d30a2b7af9e09b6666ee553a",
-          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d"
+          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d",
+          "label": "Implementation slot"
         }
       }
     },
     "0x74e5664394998f13b07af42446380acef637969f": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.ezETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -530,12 +469,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009a8c37a8832bef41d30a2b7af9e09b6666ee553a",
-          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d"
+          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d",
+          "label": "Implementation slot"
         }
       }
     },
     "0x91b7d78bf92db564221f6b5aee744d1727d1dd1e": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.WETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -570,7 +510,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000034fd9638ee82e78f21d66b54bf4d4e61cdb4f7d1",
-          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb"
+          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520457468657265756d204c69646f205661726961626c652044656274",
@@ -583,7 +524,7 @@
       }
     },
     "0xc035a7cf15375ce2706766804551791ad035e0c2": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.wstETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -618,12 +559,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009a8c37a8832bef41d30a2b7af9e09b6666ee553a",
-          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d"
+          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d",
+          "label": "Implementation slot"
         }
       }
     },
     "0xc2015641564a5914a17cb9a92ec8d8fecfa8f2d0": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.sUSDe.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -658,12 +600,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009a8c37a8832bef41d30a2b7af9e09b6666ee553a",
-          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d"
+          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d",
+          "label": "Implementation slot"
         }
       }
     },
     "0xce8c60fd8390efcc3fc66a3f0bd64beb969e750e": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.tETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -698,12 +641,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009a8c37a8832bef41d30a2b7af9e09b6666ee553a",
-          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d"
+          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d",
+          "label": "Implementation slot"
         }
       }
     },
     "0xdabad81af85554e9ae636395611c58f7ec1aaec5": {
-      "label": null,
+      "label": "GovernanceV3Ethereum.PAYLOADS_CONTROLLER",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -719,7 +663,7 @@
       }
     },
     "0xe439edd2625772aa635b437c099c607b6eb7d35f": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.wstETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -754,7 +698,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000034fd9638ee82e78f21d66b54bf4d4e61cdb4f7d1",
-          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb"
+          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520457468657265756d204c69646f205661726961626c652044656274",
@@ -767,7 +712,7 @@
       }
     },
     "0xe7ea6125490ae4594ad9b44d05dff9f2a4343134": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.tETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -802,7 +747,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000034fd9638ee82e78f21d66b54bf4d4e61cdb4f7d1",
-          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb"
+          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520457468657265756d204c69646f205661726961626c652044656274",
@@ -815,7 +761,7 @@
       }
     },
     "0xed90de2d824ee766c6fd22e90b12e598f681dc9f": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.USDC.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -850,7 +796,8 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x00000000000000000000000034fd9638ee82e78f21d66b54bf4d4e61cdb4f7d1",
-          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb"
+          "newValue": "0x0000000000000000000000004ad2dc38f74ce4a89bd965b0d27740d67399ddfb",
+          "label": "Implementation slot"
         },
         "0xbbe3212124853f8b0084a66a2d057c2966e251e132af3691db153ab65f0d1a4d": {
           "previousValue": "0x4161766520457468657265756d204c69646f205661726961626c652044656274",
@@ -863,7 +810,7 @@
       }
     },
     "0xfa1fdbbd71b0aa16162d76914d69cd8cb3ef92da": {
-      "label": null,
+      "label": "AaveV3EthereumLido.ASSETS.WETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -898,399 +845,11 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000009a8c37a8832bef41d30a2b7af9e09b6666ee553a",
-          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d"
+          "newValue": "0x00000000000000000000000080d786df608603ccdcc83f5712b97c185a6a948d",
+          "label": "Implementation slot"
         }
       }
     }
-  },
-  "reserves": {
-    "0x40D16FC0246aD3160Ccc09B8D0D3A2cD28aE6C2f": {
-      "aToken": "0x18eFE565A5373f430e2F809b97De30335B3ad96A",
-      "aTokenName": "Aave Ethereum Lido GHO",
-      "aTokenSymbol": "aEthLidoGHO",
-      "aTokenUnderlyingBalance": "13958343950539374798916450",
-      "borrowCap": 70000000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 6,
-      "interestRateStrategy": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 0,
-      "liquidationProtocolFee": 0,
-      "liquidationThreshold": 0,
-      "ltv": 0,
-      "oracle": "0xD110cac5d8682A3b045D5524a9903E031d70FCCd",
-      "oracleDecimals": 8,
-      "oracleLatestAnswer": "100000000",
-      "reserveFactor": 1000,
-      "supplyCap": 90000000,
-      "symbol": "GHO",
-      "underlying": "0x40D16FC0246aD3160Ccc09B8D0D3A2cD28aE6C2f",
-      "usageAsCollateralEnabled": false,
-      "variableDebtToken": "0x18577F0f4A0B2Ee6F4048dB51c7acd8699F97DB8",
-      "variableDebtTokenName": "Aave Ethereum Lido Variable Debt GHO",
-      "variableDebtTokenSymbol": "variableDebtEthLidoGHO",
-      "virtualBalance": "13958343950539374798916450"
-    },
-    "0x7f39C581F595B53c5cb19bD0b3f8dA6c935E2Ca0": {
-      "aToken": "0xC035a7cf15375cE2706766804551791aD035E0C2",
-      "aTokenName": "Aave Ethereum Lido wstETH",
-      "aTokenSymbol": "aEthLidowstETH",
-      "aTokenUnderlyingBalance": "38120506041916716725102",
-      "borrowCap": 280000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 0,
-      "interestRateStrategy": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10600,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 8300,
-      "ltv": 8200,
-      "oracle": "0xe1D97bF61901B075E9626c8A2340a7De385861Ef",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped wstETH / stETH(ETH) / USD",
-      "oracleLatestAnswer": "448008132092",
-      "reserveFactor": 500,
-      "supplyCap": 650000,
-      "symbol": "wstETH",
-      "underlying": "0x7f39C581F595B53c5cb19bD0b3f8dA6c935E2Ca0",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xE439edd2625772AA635B437C099C607B6eb7d35f",
-      "variableDebtTokenName": "Aave Ethereum Lido Variable Debt wstETH",
-      "variableDebtTokenSymbol": "variableDebtEthLidowstETH",
-      "virtualBalance": "38120506041916716725102"
-    },
-    "0x9D39A5DE30e57443BfF2A8307A4256c8797A3497": {
-      "aToken": "0xc2015641564a5914A17CB9A92eC8d8feCfa8f2D0",
-      "aTokenName": "Aave Ethereum Lido sUSDe",
-      "aTokenSymbol": "aEthLidosUSDe",
-      "aTokenUnderlyingBalance": "1927093882704642523378827",
-      "borrowCap": 1000,
-      "borrowingEnabled": false,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 5,
-      "interestRateStrategy": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10750,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 10,
-      "ltv": 5,
-      "oracle": "0x42bc86f2f08419280a99d8fbEa4672e7c30a86ec",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped sUSDe / USDT / USD",
-      "oracleLatestAnswer": "118352247",
-      "reserveFactor": 1000,
-      "supplyCap": 60000000,
-      "symbol": "sUSDe",
-      "underlying": "0x9D39A5DE30e57443BfF2A8307A4256c8797A3497",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x2ABbAab3EF4e4A899d39e7EC996b5715E76b399a",
-      "variableDebtTokenName": "Aave Ethereum Lido Variable Debt sUSDe",
-      "variableDebtTokenSymbol": "variableDebtEthLidosUSDe",
-      "virtualBalance": "1927093882704642523378827"
-    },
-    "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48": {
-      "aToken": "0x2A1FBcb52Ed4d9b23daD17E1E8Aed4BB0E6079b8",
-      "aTokenName": "Aave Ethereum Lido USDC",
-      "aTokenSymbol": "aEthLidoUSDC",
-      "aTokenUnderlyingBalance": "519455368658",
-      "borrowCap": 27600000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 3,
-      "interestRateStrategy": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 0,
-      "liquidationProtocolFee": 0,
-      "liquidationThreshold": 0,
-      "ltv": 0,
-      "oracle": "0x3f73F03aa83B2A48ed27E964eD0fDb590332095B",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDC / USD",
-      "oracleLatestAnswer": "99986000",
-      "reserveFactor": 1000,
-      "supplyCap": 30000000,
-      "symbol": "USDC",
-      "underlying": "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
-      "usageAsCollateralEnabled": false,
-      "variableDebtToken": "0xeD90dE2D824Ee766c6Fd22E90b12e598f681dc9F",
-      "variableDebtTokenName": "Aave Ethereum Lido Variable Debt USDC",
-      "variableDebtTokenSymbol": "variableDebtEthLidoUSDC",
-      "virtualBalance": "519455363658"
-    },
-    "0xA1290d69c65A6Fe4DF752f95823fae25cB99e5A7": {
-      "aToken": "0x56D919E7B25aA42F3F8a4BC77b8982048F2E84B4",
-      "aTokenName": "Aave Ethereum Lido rsETH",
-      "aTokenSymbol": "aEthLidorsETH",
-      "aTokenUnderlyingBalance": "29605092450689574122506",
-      "borrowCap": 1,
-      "borrowingEnabled": false,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 7,
-      "interestRateStrategy": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10750,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 10,
-      "ltv": 5,
-      "oracle": "0x7292C95A5f6A501a9c4B34f6393e221F2A0139c3",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped rsETH / ETH / USD",
-      "oracleLatestAnswer": "389071779983",
-      "reserveFactor": 15,
-      "supplyCap": 65000,
-      "symbol": "rsETH",
-      "underlying": "0xA1290d69c65A6Fe4DF752f95823fae25cB99e5A7",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x2c2163f120cf58631368981BC16e90190Bc6C644",
-      "variableDebtTokenName": "Aave Ethereum Lido Variable Debt rsETH",
-      "variableDebtTokenSymbol": "variableDebtEthLidorsETH",
-      "virtualBalance": "29605092450689574122506"
-    },
-    "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2": {
-      "aToken": "0xfA1fDbBD71B0aA16162D76914d69cD8CB3Ef92da",
-      "aTokenName": "Aave Ethereum Lido WETH",
-      "aTokenSymbol": "aEthLidoWETH",
-      "aTokenUnderlyingBalance": "8775974491469044448387",
-      "borrowCap": 810000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 1,
-      "interestRateStrategy": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 8500,
-      "ltv": 8400,
-      "oracle": "0x5424384B256154046E9667dDFaaa5e550145215e",
-      "oracleDecimals": 8,
-      "oracleDescription": "ETH / USD",
-      "oracleLatestAnswer": "370619000000",
-      "reserveFactor": 1000,
-      "supplyCap": 900000,
-      "symbol": "WETH",
-      "underlying": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x91b7d78BF92db564221f6B5AeE744D1727d1Dd1e",
-      "variableDebtTokenName": "Aave Ethereum Lido Variable Debt WETH",
-      "variableDebtTokenSymbol": "variableDebtEthLidoWETH",
-      "virtualBalance": "8775974491469044448387"
-    },
-    "0xD11c452fc99cF405034ee446803b6F6c1F6d5ED8": {
-      "aToken": "0xce8c60fd8390eFCc3Fc66A3f0bd64BEb969e750E",
-      "aTokenName": "Aave Ethereum Lido tETH",
-      "aTokenSymbol": "aEthLidotETH",
-      "aTokenUnderlyingBalance": "35689557383929492894684",
-      "borrowCap": 1,
-      "borrowingEnabled": false,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 8,
-      "interestRateStrategy": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10750,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 10,
-      "ltv": 5,
-      "oracle": "0x85968026294b8f8Fb86d6bF3Cda079f9376aD05A",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped tETH / wstETH / ETH / USD",
-      "oracleLatestAnswer": "449423348957",
-      "reserveFactor": 5000,
-      "supplyCap": 40000,
-      "symbol": "tETH",
-      "underlying": "0xD11c452fc99cF405034ee446803b6F6c1F6d5ED8",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0xe7ea6125490ae4594aD9B44D05dFF9F2A4343134",
-      "variableDebtTokenName": "Aave Ethereum Lido Variable Debt tETH",
-      "variableDebtTokenSymbol": "variableDebtEthLidotETH",
-      "virtualBalance": "35689557383929492894684"
-    },
-    "0xbf5495Efe5DB9ce00f80364C8B423567e58d2110": {
-      "aToken": "0x74e5664394998f13B07aF42446380ACef637969f",
-      "aTokenName": "Aave Ethereum Lido ezETH",
-      "aTokenSymbol": "aEthLidoezETH",
-      "aTokenUnderlyingBalance": "178096932908275320408312",
-      "borrowCap": 100,
-      "borrowingEnabled": false,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 4,
-      "interestRateStrategy": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": false,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10750,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 10,
-      "ltv": 5,
-      "oracle": "0xF3d49021fF3bbBFDfC1992A4b09E5D1d141D044C",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped ezETH / ezETH(ETH) / USD",
-      "oracleLatestAnswer": "391042214713",
-      "reserveFactor": 1500,
-      "supplyCap": 240000,
-      "symbol": "ezETH",
-      "underlying": "0xbf5495Efe5DB9ce00f80364C8B423567e58d2110",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x08e1bba76D27841dD91FAb4b3a636A0D5CF8c3E9",
-      "variableDebtTokenName": "Aave Ethereum Lido Variable Debt ezETH",
-      "variableDebtTokenSymbol": "variableDebtEthLidoezETH",
-      "virtualBalance": "178096932908275320408312"
-    },
-    "0xdC035D45d973E3EC169d2276DDab16f1e407384F": {
-      "aToken": "0x09AA30b182488f769a9824F15E6Ce58591Da4781",
-      "aTokenName": "Aave Ethereum Lido USDS",
-      "aTokenSymbol": "aEthLidoUSDS",
-      "aTokenUnderlyingBalance": "1035385445121384392730180",
-      "borrowCap": 180000000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 2,
-      "interestRateStrategy": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 0,
-      "liquidationProtocolFee": 0,
-      "liquidationThreshold": 0,
-      "ltv": 0,
-      "oracle": "0x94C7FD62fd0506e71d8142E9D36687fC72A86B02",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDS/USD",
-      "oracleLatestAnswer": "100000883",
-      "reserveFactor": 1000,
-      "supplyCap": 200000000,
-      "symbol": "USDS",
-      "underlying": "0xdC035D45d973E3EC169d2276DDab16f1e407384F",
-      "usageAsCollateralEnabled": false,
-      "variableDebtToken": "0x2D9fe18b6c35FE439cC15D932cc5C943bf2d901E",
-      "variableDebtTokenName": "Aave Ethereum Lido Variable Debt USDS",
-      "variableDebtTokenSymbol": "variableDebtEthLidoUSDS",
-      "virtualBalance": "1035385445121384392730180"
-    }
-  },
-  "strategies": {
-    "0x40D16FC0246aD3160Ccc09B8D0D3A2cD28aE6C2f": {
-      "address": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "baseVariableBorrowRate": "37500000000000000000000000",
-      "maxVariableBorrowRate": "400000000000000000000000000",
-      "optimalUsageRatio": "920000000000000000000000000",
-      "variableRateSlope1": "12500000000000000000000000",
-      "variableRateSlope2": "350000000000000000000000000"
-    },
-    "0x7f39C581F595B53c5cb19bD0b3f8dA6c935E2Ca0": {
-      "address": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "855500000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "5500000000000000000000000",
-      "variableRateSlope2": "850000000000000000000000000"
-    },
-    "0x9D39A5DE30e57443BfF2A8307A4256c8797A3497": {
-      "address": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "baseVariableBorrowRate": "500000000000000000000000",
-      "maxVariableBorrowRate": "31500000000000000000000000",
-      "optimalUsageRatio": "10000000000000000000000000",
-      "variableRateSlope1": "1000000000000000000000000",
-      "variableRateSlope2": "30000000000000000000000000"
-    },
-    "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48": {
-      "address": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "405000000000000000000000000",
-      "optimalUsageRatio": "920000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "350000000000000000000000000"
-    },
-    "0xA1290d69c65A6Fe4DF752f95823fae25cB99e5A7": {
-      "address": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "1100000000000000000000000000",
-      "optimalUsageRatio": "10000000000000000000000000",
-      "variableRateSlope1": "100000000000000000000000000",
-      "variableRateSlope2": "1000000000000000000000000000"
-    },
-    "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2": {
-      "address": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "477700000000000000000000000",
-      "optimalUsageRatio": "920000000000000000000000000",
-      "variableRateSlope1": "27700000000000000000000000",
-      "variableRateSlope2": "450000000000000000000000000"
-    },
-    "0xD11c452fc99cF405034ee446803b6F6c1F6d5ED8": {
-      "address": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3100000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "100000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0xbf5495Efe5DB9ce00f80364C8B423567e58d2110": {
-      "address": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3070000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0xdC035D45d973E3EC169d2276DDab16f1e407384F": {
-      "address": "0x8958b1C39269167527821f8c276Ef7504883f2fa",
-      "baseVariableBorrowRate": "45000000000000000000000000",
-      "maxVariableBorrowRate": "405000000000000000000000000",
-      "optimalUsageRatio": "920000000000000000000000000",
-      "variableRateSlope1": "10000000000000000000000000",
-      "variableRateSlope2": "350000000000000000000000000"
-    }
   }
 }
+```
