--- a/diffs/59144_0xc47b8C00b0f69a36fa203Ffeac0334874574a8Ac_before_59144_0xc47b8C00b0f69a36fa203Ffeac0334874574a8Ac_after.md
+++ b/diffs/59144_0xc47b8C00b0f69a36fa203Ffeac0334874574a8Ac_before_59144_0xc47b8C00b0f69a36fa203Ffeac0334874574a8Ac_after.md
@@ -1,45 +1,10 @@
+## Raw diff
+
+```json
 {
-  "chainId": 59144,
-  "eModes": {
-    "1": {
-      "borrowableBitmap": "1",
-      "collateralBitmap": "16",
-      "eModeCategory": 1,
-      "label": "wstETH correlated",
-      "liquidationBonus": 10100,
-      "liquidationThreshold": 9550,
-      "ltv": 9350
-    },
-    "2": {
-      "borrowableBitmap": "1",
-      "collateralBitmap": "32",
-      "eModeCategory": 2,
-      "label": "ezETH correlated",
-      "liquidationBonus": 10100,
-      "liquidationThreshold": 9300,
-      "ltv": 9000
-    },
-    "3": {
-      "borrowableBitmap": "1",
-      "collateralBitmap": "64",
-      "eModeCategory": 3,
-      "label": "weETH correlated",
-      "liquidationBonus": 10100,
-      "liquidationThreshold": 9300,
-      "ltv": 9000
-    }
-  },
-  "poolConfig": {
-    "oracle": "0xCFDAdA7DCd2e785cF706BaDBC2B8Af5084d595e9",
-    "pool": "0xc47b8C00b0f69a36fa203Ffeac0334874574a8Ac",
-    "poolAddressesProvider": "0x89502c3731F69DDC95B65753708A07F8Cd0373F4",
-    "poolConfigurator": "0x812E7c19421D9f41A6DDCF047d5cc2dE2Ca5Bfa2",
-    "priceOracleSentinel": "0x0000000000000000000000000000000000000000",
-    "protocolDataProvider": "0x47cd4b507B81cB831669c71c7077f4daF6762FF4"
-  },
   "raw": {
     "0x0c7921ab4888fd06731898b3ffffeb06781d5f4f": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.weETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -74,12 +39,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000c4abed17658a379394cd116756e0611e52ee2c25",
-          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac"
+          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac",
+          "label": "Implementation slot"
         }
       }
     },
     "0x0e7543a9da61b2e71fc880685ed2945b7426a689": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.WETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -114,12 +80,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000008581fd85b93cbdb66e9860c1bc280dc52284f9f4",
-          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7"
+          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7",
+          "label": "Implementation slot"
         }
       }
     },
     "0x1fe3452cef885724f8adf1382ee17d05d7e01cab": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.ezETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -154,12 +121,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000008581fd85b93cbdb66e9860c1bc280dc52284f9f4",
-          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7"
+          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7",
+          "label": "Implementation slot"
         }
       }
     },
     "0x374d7860c4f2f604de0191298dd393703cce84f3": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.USDC.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -194,12 +162,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000c4abed17658a379394cd116756e0611e52ee2c25",
-          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac"
+          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac",
+          "label": "Implementation slot"
         }
       }
     },
     "0x37a843725508243952950307ceace7a9f5d5c280": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.weETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -234,12 +203,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000008581fd85b93cbdb66e9860c1bc280dc52284f9f4",
-          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7"
+          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7",
+          "label": "Implementation slot"
         }
       }
     },
     "0x37f7e06359f98162615e016d0008023d910bb576": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.WBTC.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -274,12 +244,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000c4abed17658a379394cd116756e0611e52ee2c25",
-          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac"
+          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac",
+          "label": "Implementation slot"
         }
       }
     },
     "0x3bce23a1363728091bc57a58a226cf2940c2e074": {
-      "label": null,
+      "label": "GovernanceV3Linea.PAYLOADS_CONTROLLER",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -295,7 +266,7 @@
       }
     },
     "0x4cedfa47f7d0e9036110b850ce49f4cd47b28a2f": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.USDT.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -330,12 +301,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000008581fd85b93cbdb66e9860c1bc280dc52284f9f4",
-          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7"
+          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7",
+          "label": "Implementation slot"
         }
       }
     },
     "0x58943d20e010d9e34c4511990e232783460d0219": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.wstETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -370,12 +342,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000c4abed17658a379394cd116756e0611e52ee2c25",
-          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac"
+          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac",
+          "label": "Implementation slot"
         }
       }
     },
     "0x63ab166e6e1b6fb705b6ca23686fad9705eb3534": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.USDC.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -410,12 +383,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000008581fd85b93cbdb66e9860c1bc280dc52284f9f4",
-          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7"
+          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7",
+          "label": "Implementation slot"
         }
       }
     },
     "0x74a1b56f5137b00aa0ada1dd964a3a361ecc32e9": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.WBTC.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -450,12 +424,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000008581fd85b93cbdb66e9860c1bc280dc52284f9f4",
-          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7"
+          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7",
+          "label": "Implementation slot"
         }
       }
     },
     "0x787897df92703bb3fc4d9ee98e15c0b8130bf163": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.WETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -490,12 +465,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000c4abed17658a379394cd116756e0611e52ee2c25",
-          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac"
+          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac",
+          "label": "Implementation slot"
         }
       }
     },
     "0x81c1a619be23050b3242b41a739e6b6cfda56687": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.wstETH.V_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -530,12 +506,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x0000000000000000000000008581fd85b93cbdb66e9860c1bc280dc52284f9f4",
-          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7"
+          "newValue": "0x000000000000000000000000568821dafdc312b583c6cc233a55ee80502f50e7",
+          "label": "Implementation slot"
         }
       }
     },
     "0x88231dfec71d4ff5c1e466d08c321944a7adc673": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.USDT.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -570,12 +547,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000c4abed17658a379394cd116756e0611e52ee2c25",
-          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac"
+          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac",
+          "label": "Implementation slot"
         }
       }
     },
     "0x935efcbefc1df0541afc3fe145134f8c9a0beb89": {
-      "label": null,
+      "label": "AaveV3Linea.ASSETS.ezETH.A_TOKEN",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -610,12 +588,13 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000c4abed17658a379394cd116756e0611e52ee2c25",
-          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac"
+          "newValue": "0x0000000000000000000000007b03821ac93ff55d029a543b86c723aa3ccb4fac",
+          "label": "Implementation slot"
         }
       }
     },
     "0xc47b8c00b0f69a36fa203ffeac0334874574a8ac": {
-      "label": null,
+      "label": "AaveV3Linea.POOL",
       "contract": null,
       "balanceDiff": null,
       "nonceDiff": null,
@@ -630,314 +609,11 @@
         },
         "0x360894a13ba1a3210667c828492db98dca3e2076cc3735a920a3ca505d382bbc": {
           "previousValue": "0x000000000000000000000000c9ed58947791a09a1ec1cf195ae65ebc337476a8",
-          "newValue": "0x000000000000000000000000c10991708d7f60ee381b9883e857b0c0aeb9bea7"
+          "newValue": "0x000000000000000000000000c10991708d7f60ee381b9883e857b0c0aeb9bea7",
+          "label": "Implementation slot"
         }
       }
     }
-  },
-  "reserves": {
-    "0x176211869cA2b568f2A7D4EE941E073a821EE1ff": {
-      "aToken": "0x374D7860c4f2f604De0191298dD393703Cce84f3",
-      "aTokenName": "Aave Linea USDC",
-      "aTokenSymbol": "aLinUSDC",
-      "aTokenUnderlyingBalance": "548820010722",
-      "borrowCap": 2700000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 2,
-      "interestRateStrategy": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7800,
-      "ltv": 7500,
-      "oracle": "0x14ac9f8a8646D11D66fbaA9E9F5A869dC08B5D71",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDC/USD",
-      "oracleLatestAnswer": "99983353",
-      "reserveFactor": 1000,
-      "supplyCap": 3000000,
-      "symbol": "USDC",
-      "underlying": "0x176211869cA2b568f2A7D4EE941E073a821EE1ff",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x63aB166e6E1b6Fb705b6ca23686FaD9705EB3534",
-      "variableDebtTokenName": "Aave Linea Variable Debt USDC",
-      "variableDebtTokenSymbol": "variableDebtLinUSDC",
-      "virtualBalance": "548820010722"
-    },
-    "0x1Bf74C010E6320bab11e2e5A532b5AC15e0b8aA6": {
-      "aToken": "0x0C7921aB4888fd06731898b3fffFeB06781D5F4F",
-      "aTokenName": "Aave Linea weETH",
-      "aTokenSymbol": "aLinweETH",
-      "aTokenUnderlyingBalance": "1354939805977165777230",
-      "borrowCap": 1,
-      "borrowingEnabled": false,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 6,
-      "interestRateStrategy": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10750,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7500,
-      "ltv": 7250,
-      "oracle": "0x0abf2f5642d945b49B8d2DBC6f85c2D8e0424C85",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped weETH / eETH(ETH) / USD",
-      "oracleLatestAnswer": "408997600824",
-      "reserveFactor": 4500,
-      "supplyCap": 2000,
-      "symbol": "weETH",
-      "underlying": "0x1Bf74C010E6320bab11e2e5A532b5AC15e0b8aA6",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x37a843725508243952950307CeacE7A9f5D5c280",
-      "variableDebtTokenName": "Aave Linea Variable Debt weETH",
-      "variableDebtTokenSymbol": "variableDebtLinweETH",
-      "virtualBalance": "1354939805977165777230"
-    },
-    "0x2416092f143378750bb29b79eD961ab195CcEea5": {
-      "aToken": "0x935EfCBeFc1dF0541aFc3fE145134f8c9a0beB89",
-      "aTokenName": "Aave Linea ezETH",
-      "aTokenSymbol": "aLinezETH",
-      "aTokenUnderlyingBalance": "1181821369674124360697",
-      "borrowCap": 1,
-      "borrowingEnabled": false,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 5,
-      "interestRateStrategy": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10750,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7500,
-      "ltv": 7200,
-      "oracle": "0x1217a8A40cea4dB5429fbF6EDeB3B606b99CC9b0",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped ezETH / ETH / USD",
-      "oracleLatestAnswer": "402286356023",
-      "reserveFactor": 4500,
-      "supplyCap": 2400,
-      "symbol": "ezETH",
-      "underlying": "0x2416092f143378750bb29b79eD961ab195CcEea5",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x1fE3452CEF885724F8aDF1382ee17d05d7e01CaB",
-      "variableDebtTokenName": "Aave Linea Variable Debt ezETH",
-      "variableDebtTokenSymbol": "variableDebtLinezETH",
-      "virtualBalance": "1181821369674124360697"
-    },
-    "0x3aAB2285ddcDdaD8edf438C1bAB47e1a9D05a9b4": {
-      "aToken": "0x37f7E06359F98162615e016d0008023D910bB576",
-      "aTokenName": "Aave Linea WBTC",
-      "aTokenSymbol": "aLinWBTC",
-      "aTokenUnderlyingBalance": "1065394387",
-      "borrowCap": 2,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 8,
-      "id": 1,
-      "interestRateStrategy": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10700,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7800,
-      "ltv": 7300,
-      "oracle": "0x7A99092816C8BD5ec8ba229e3a6E6Da1E628E1F9",
-      "oracleDecimals": 8,
-      "oracleDescription": "BTC / USD",
-      "oracleLatestAnswer": "11896231673666",
-      "reserveFactor": 2000,
-      "supplyCap": 20,
-      "symbol": "WBTC",
-      "underlying": "0x3aAB2285ddcDdaD8edf438C1bAB47e1a9D05a9b4",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x74A1b56f5137b00AA0ADA1dD964a3A361Ecc32e9",
-      "variableDebtTokenName": "Aave Linea Variable Debt WBTC",
-      "variableDebtTokenSymbol": "variableDebtLinWBTC",
-      "virtualBalance": "1065394387"
-    },
-    "0xA219439258ca9da29E9Cc4cE5596924745e12B93": {
-      "aToken": "0x88231dfEC71D4FF5c1e466D08C321944A7adC673",
-      "aTokenName": "Aave Linea USDT",
-      "aTokenSymbol": "aLinUSDT",
-      "aTokenUnderlyingBalance": "124839979275",
-      "borrowCap": 900000,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 6,
-      "id": 3,
-      "interestRateStrategy": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "isActive": true,
-      "isBorrowableInIsolation": true,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10500,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7800,
-      "ltv": 7500,
-      "oracle": "0x0DccbA847D677d4dc3c22C9Dc17DC468226d08Ed",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped USDT/USD",
-      "oracleLatestAnswer": "100032270",
-      "reserveFactor": 1000,
-      "supplyCap": 1000000,
-      "symbol": "USDT",
-      "underlying": "0xA219439258ca9da29E9Cc4cE5596924745e12B93",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x4CEdfa47F7d0e9036110B850Ce49f4cd47b28a2F",
-      "variableDebtTokenName": "Aave Linea Variable Debt USDT",
-      "variableDebtTokenSymbol": "variableDebtLinUSDT",
-      "virtualBalance": "124839979275"
-    },
-    "0xB5beDd42000b71FddE22D3eE8a79Bd49A568fC8F": {
-      "aToken": "0x58943d20e010d9E34C4511990e232783460d0219",
-      "aTokenName": "Aave Linea wstETH",
-      "aTokenSymbol": "aLinwstETH",
-      "aTokenUnderlyingBalance": "106430849205426702822",
-      "borrowCap": 75,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 4,
-      "interestRateStrategy": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10700,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 7900,
-      "ltv": 7500,
-      "oracle": "0x96014CA32e2902A5F07c6ADF00eB17D3DE9aC364",
-      "oracleDecimals": 8,
-      "oracleDescription": "Capped wstETH / stETH(ETH) / USD",
-      "oracleLatestAnswer": "460933284728",
-      "reserveFactor": 500,
-      "supplyCap": 150,
-      "symbol": "wstETH",
-      "underlying": "0xB5beDd42000b71FddE22D3eE8a79Bd49A568fC8F",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x81C1a619Be23050B3242B41a739e6B6CfDa56687",
-      "variableDebtTokenName": "Aave Linea Variable Debt wstETH",
-      "variableDebtTokenSymbol": "variableDebtLinwstETH",
-      "virtualBalance": "106430849205426702822"
-    },
-    "0xe5D7C2a44FfDDf6b295A15c148167daaAf5Cf34f": {
-      "aToken": "0x787897dF92703BB3Fc4d9Ee98e15C0b8130Bf163",
-      "aTokenName": "Aave Linea WETH",
-      "aTokenSymbol": "aLinWETH",
-      "aTokenUnderlyingBalance": "554983012740229414986",
-      "borrowCap": 4400,
-      "borrowingEnabled": true,
-      "debtCeiling": 0,
-      "decimals": 18,
-      "id": 0,
-      "interestRateStrategy": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "isActive": true,
-      "isBorrowableInIsolation": false,
-      "isFlashloanable": true,
-      "isFrozen": false,
-      "isPaused": false,
-      "isSiloed": false,
-      "liquidationBonus": 10600,
-      "liquidationProtocolFee": 1000,
-      "liquidationThreshold": 8300,
-      "ltv": 8000,
-      "oracle": "0x3c6Cd9Cc7c7a4c2Cf5a82734CD249D7D593354dA",
-      "oracleDecimals": 8,
-      "oracleDescription": "ETH / USD",
-      "oracleLatestAnswer": "381311455787",
-      "reserveFactor": 1500,
-      "supplyCap": 4800,
-      "symbol": "WETH",
-      "underlying": "0xe5D7C2a44FfDDf6b295A15c148167daaAf5Cf34f",
-      "usageAsCollateralEnabled": true,
-      "variableDebtToken": "0x0e7543a9dA61b2E71fC880685eD2945B7426a689",
-      "variableDebtTokenName": "Aave Linea Variable Debt WETH",
-      "variableDebtTokenSymbol": "variableDebtLinWETH",
-      "virtualBalance": "554983012740229414986"
-    }
-  },
-  "strategies": {
-    "0x176211869cA2b568f2A7D4EE941E073a821EE1ff": {
-      "address": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "655000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "600000000000000000000000000"
-    },
-    "0x1Bf74C010E6320bab11e2e5A532b5AC15e0b8aA6": {
-      "address": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3070000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0x2416092f143378750bb29b79eD961ab195CcEea5": {
-      "address": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3070000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0x3aAB2285ddcDdaD8edf438C1bAB47e1a9D05a9b4": {
-      "address": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3070000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0xA219439258ca9da29E9Cc4cE5596924745e12B93": {
-      "address": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "655000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "55000000000000000000000000",
-      "variableRateSlope2": "600000000000000000000000000"
-    },
-    "0xB5beDd42000b71FddE22D3eE8a79Bd49A568fC8F": {
-      "address": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "3070000000000000000000000000",
-      "optimalUsageRatio": "450000000000000000000000000",
-      "variableRateSlope1": "70000000000000000000000000",
-      "variableRateSlope2": "3000000000000000000000000000"
-    },
-    "0xe5D7C2a44FfDDf6b295A15c148167daaAf5Cf34f": {
-      "address": "0xB1532b76D054c9F9E61b25c4d91f69B4133E4671",
-      "baseVariableBorrowRate": "0",
-      "maxVariableBorrowRate": "827000000000000000000000000",
-      "optimalUsageRatio": "900000000000000000000000000",
-      "variableRateSlope1": "27000000000000000000000000",
-      "variableRateSlope2": "800000000000000000000000000"
-    }
   }
 }
+```
